--- a/soochowjamo.yaml
+++ b/soochowjamo.yaml
@@ -74,16 +74,16 @@
 駟	스〮
 肆	스〮
 笥	스〮
-詞	쓰〮
-祠	쓰〮
-瓷	쓰〮
-茨	쓰〮
-辭	쓰〮
-慈	쓰〮
-磁	쓰〮
-自	쓰〮
-鋤	쓰〮
-鉏	쓰〮
+詞	쯔〮
+祠	쯔〮
+瓷	쯔〮
+茨	쯔〮
+辭	쯔〮
+慈	쯔〮
+磁	쯔〮
+自	쯔〮
+鋤	ᅑᅳ〮
+鉏	쯔〮
 食	쓰〮
 餈	쓰〮
 伺	쓰〮
@@ -91,7 +91,7 @@
 似	쓰〯
 姒	쓰〯
 寺	쓰〯
-侍	쓰〯
+侍	ᄿᅳ〯
 俟	쓰〯
 伺	쓰〯
 飼	쓰〯
@@ -171,121 +171,121 @@
 著	제〮
 翥	제〮
 鑄	제〮
-癡	체
-蚩	체
-嗤	체
-媸	체
-笞	체
-螭	체
-魑	체
-吹	체
-樞	체
-趨	체
-鴟	체
-齒	체〯
-恥	체〯
-耻	체〯
-侈	체〯
-處	체〯
-褚	체〯
-鼠	체〯
-杵	체〯
-褫	체〯
-杼	체〯
-翅	체〮
-處	체〮
-啻	체〮
-㥡	체〮
-詩	세
-施	세
-尿	세
-屍	세
-尸	세
-書	세
-輸	세
-舒	세
-抒	세
-紓	세
-胥	세
-樞	세
-始	세〯
-矢	세〯
-暑	세〯
-黍	세〯
-水	세〯
-髓	세〯
-豕	세〯
-試	세〮
-弑	세〮
-弒	세〮
-世	세〮
-勢	세〮
-庶	세〮
-戍	세〮
-恕	세〮
+癡	ᅕᅦ
+蚩	ᅕᅦ
+嗤	ᅕᅦ
+媸	ᅕᅦ
+笞	ᅕᅦ
+螭	ᅕᅦ
+魑	ᅕᅦ
+吹	ᅕᅦ
+樞	ᅕᅦ
+趨	ᅕᅦ
+鴟	ᅕᅦ
+齒	ᅕᅦ〯
+恥	ᅕᅦ〯
+耻	ᅕᅦ〯
+侈	ᅕᅦ〯
+處	ᅕᅦ〯
+褚	ᅕᅦ〯
+鼠	ᅕᅦ〯
+杵	ᅕᅦ〯
+褫	ᅕᅦ〯
+杼	ᅕᅦ〯
+翅	ᅕᅦ〮
+處	ᅕᅦ〮
+啻	ᅕᅦ〮
+㥡	ᅕᅦ〮
+詩	ᄾᅦ
+施	ᄾᅦ
+尿	ᄾᅦ
+屍	ᄾᅦ
+尸	ᄾᅦ
+書	ᄾᅦ
+輸	ᄾᅦ
+舒	ᄾᅦ
+抒	ᄾᅦ
+紓	ᄾᅦ
+胥	ᄾᅦ
+樞	ᄾᅦ
+始	ᄾᅦ〯
+矢	ᄾᅦ〯
+暑	ᄾᅦ〯
+黍	ᄾᅦ〯
+水	ᄾᅦ〯
+髓	ᄾᅦ〯
+豕	ᄾᅦ〯
+試	ᄾᅦ〮
+弑	ᄾᅦ〮
+弒	ᄾᅦ〮
+世	ᄾᅦ〮
+勢	ᄾᅦ〮
+庶	ᄾᅦ〮
+戍	ᄾᅦ〮
+恕	ᄾᅦ〮
 豎	세
-時	쎄〮
-鰣	쎄〮
-蒔	쎄〮
-塒	쎄〮
-池	쎄〮
-馳	쎄〮
-弛	쎄〮
-遲	쎄〮
-持	쎄〮
-廚	쎄〮
-櫥	쎄〮
-除	쎄〮
-滁	쎄〮
-儲	쎄〮
-躇	쎄〮
-殊	쎄〮
-如	쎄〮
-茹	쎄〮
-儒	쎄〮
-孺	쎄〮
-蠕	쎄〮
-襦	쎄〮
-濡	쎄〮
-錘	쎄〮
-槌	쎄〮
-鎚	쎄〮
-陳	쎄〮
-墜	쎄〮
-椎	쎄〮
-篪	쎄〮
-踟	쎄〮
-氏	쎄〯
-示	쎄〯
-治	쎄〯
-視	쎄〯
-誓	쎄〯
-嗜	쎄〯
-逝	쎄〯
-恃	쎄〯
-痔	쎄〯
-峙	쎄〯
-噬	쎄〯
-滯	쎄〯
-稚	쎄〯
-雉	쎄〯
-樹	쎄〯
-豎	쎄〯
-署	쎄〯
-曙	쎄〯
-薯	쎄〯
-箸	쎄〯
-住	쎄〯
-柱	쎄〯
-貯	쎄〯
-苧	쎄〯
-佇	쎄〯
-乳	쎄〯
-穂	쎄〯
-豉	쎄〯
-豸	쎄〯
-䊓	쎄〯
-汝	쎄〯
+時	ᄿᅦ〮
+鰣	ᄿᅦ〮
+蒔	ᄿᅦ〮
+塒	ᄿᅦ〮
+池	ᅑᅦ〮
+馳	ᅑᅦ〮
+弛	ᅑᅦ〮
+遲	ᅑᅦ〮
+持	ᅑᅦ〮
+廚	ᅑᅦ〮
+櫥	ᅑᅦ〮
+除	ᅑᅦ〮
+滁	ᅑᅦ〮
+儲	ᅑᅦ〮
+躇	ᅑᅦ〮
+殊	ᄿᅦ〮
+如	ᄿᅦ〮
+茹	ᄿᅦ〮
+儒	ᄿᅦ〮
+孺	ᄿᅦ〮
+蠕	ᄿᅦ〮
+襦	ᄿᅦ〮
+濡	ᄿᅦ〮
+錘	ᅑᅦ〮
+槌	ᅑᅦ〮
+鎚	ᅑᅦ〮
+陳	ᅑᅦ〮
+墜	ᅑᅦ〮
+椎	ᅑᅦ〮
+篪	ᅑᅦ〮
+踟	ᅑᅦ〮
+氏	ᄿᅦ〯
+示	ᄿᅦ〯
+治	ᄿᅦ〯
+視	ᄿᅦ〯
+誓	ᄿᅦ〯
+嗜	ᄿᅦ〯
+逝	ᄿᅦ〯
+恃	ᄿᅦ〯
+痔	ᄿᅦ〯
+峙	ᄿᅦ〯
+噬	ᄿᅦ〯
+滯	ᄿᅦ〯
+稚	ᅑᅦ〯
+雉	ᅑᅦ〯
+樹	ᄿᅦ〯
+豎	ᄿᅦ〯
+署	ᄿᅦ〯
+曙	ᄿᅦ〯
+薯	ᄿᅦ〯
+箸	ᄿᅦ〯
+住	ᅑᅦ〯
+柱	ᅑᅦ〯
+貯	ᅑᅦ〯
+苧	ᅑᅦ〯
+佇	ᅑᅦ〯
+乳	ᄿᅦ〯
+穂	ᄿᅦ〯
+豉	ᄿᅦ〯
+豸	ᄿᅦ〯
+䊓	ᄿᅦ〯
+汝	ᄿᅦ〯
 屄	비
 蓖	비
 比	비〯
@@ -1402,148 +1402,148 @@
 喂	ᅙᅧ〮
 餵	ᅙᅧ〮
 嫗	ᅙᅧ〮
-爸	ᄇa
-䰾	ᄇa
-叭	ᄇa
-擺	ᄇa〯
-襬	ᄇa〯
-把	ᄇa〯
-拜	ᄇa〮
-湃	ᄇa〮
-派	ᄑa
-派	ᄑa〮
-排	ᄈa〮
-牌	ᄈa〮
-罷	ᄈa〯
-敗	ᄈa〯
-稗	ᄈa〯
-吧	ᄈa
-馬	ᄆa
-媽	ᄆa
-嗎	ᄆa
-埋	ᄆa〮
-買	ᄆa〯
-賣	ᄆa〯
-嘛	ᄆa〯
-多	ᄃa
-拕	ᄃa
-戴	ᄃa〮
-帶	ᄃa〮
-拖	ᄐa
-他	ᄐa
-她	ᄐa
-它	ᄐa
-太	ᄐa〮
-泰	ᄐa〮
-大	ᄄa〯
-汏	ᄄa〯
-䈆	ᄄa〯
-埭	ᄄa〯
-箉	ᄄa〯
-南	ᄂa
-那	ᄂa
-哪	ᄂa
-娜	ᄂa
-挪	ᄂa
-奶	ᄂa
-奶	ᄂa〯
-艿	ᄂa〯
-拉	ᄅa
-啦	ᄅa
-垃	ᄅa〮
-喇	ᄅa〮
-賴	ᄅa〯
-癩	ᄅa〯
-鬎	ᄅa〯
-喳	ᄌa
-抓	ᄌa
-齋	ᄌa
-咱	ᄌa
-抓	ᄌa〯
-笊	ᄌa〯
-債	ᄌa〮
-柘	ᄌa〮
-膪	ᄌa〮
-差	ᄎa
-釵	ᄎa
-扯	ᄎa
-扯	ᄎa〯
-蔡	ᄎa〮
-篩	ᄉa
-三	ᄉa
-釃	ᄉa
-籭	ᄉa
-籭	ᄉa
-灑	ᄉa〯
-撒	ᄉa〯
-傻	ᄉa〯
-耍	ᄉa〯
-啥	ᄉa〮
+爸	바
+䰾	바
+叭	바
+擺	바〯
+襬	바〯
+把	바〯
+拜	바〮
+湃	바〮
+派	파
+派	파〮
+排	빠〮
+牌	빠〮
+罷	빠〯
+敗	빠〯
+稗	빠〯
+吧	빠
+馬	마
+媽	마
+嗎	마
+埋	마〮
+買	마〯
+賣	마〯
+嘛	마〯
+多	다
+拕	다
+戴	다〮
+帶	다〮
+拖	타
+他	타
+她	타
+它	타
+太	타〮
+泰	타〮
+大	따〯
+汏	따〯
+䈆	따〯
+埭	따〯
+箉	따〯
+南	나
+那	나
+哪	나
+娜	나
+挪	나
+奶	나
+奶	나〯
+艿	나〯
+拉	라
+啦	라
+垃	라〮
+喇	라〮
+賴	라〯
+癩	라〯
+鬎	라〯
+喳	자
+抓	자
+齋	자
+咱	자
+抓	자〯
+笊	자〯
+債	자〮
+柘	자〮
+膪	자〮
+差	차
+釵	차
+扯	ᅕᅡ
+扯	ᅕᅡ〯
+蔡	차〮
+篩	사
+三	사
+釃	사
+籭	사
+籭	사
+灑	사〯
+撒	사〯
+傻	사〯
+耍	사〯
+啥	사〮
 卅	삳
-柴	ᄊa〮
-㾹	ᄊa〮
-射	ᄊa〯
-惹	ᄊa〯
-丈	ᄊa〯
-加	ᄀa
-枷	ᄀa
-袈	ᄀa
-痂	ᄀa
-家	ᄀa
-階	ᄀa
-嘉	ᄀa
-葭	ᄀa
-街	ᄀa
-傢	ᄀa
-跏	ᄀa
-假	ᄀa〯
-假	ᄀa〮
-界	ᄀa〮
-嫁	ᄀa〮
-稼	ᄀa〮
-解	ᄀa〮
-戒	ᄀa〮
-屆	ᄀa〮
-架	ᄀa〮
-駕	ᄀa〮
-介	ᄀa〮
-價	ᄀa〮
-芥	ᄀa〮
-疥	ᄀa〮
-尬	ᄀa〮
-蚧	ᄀa〮
-揩	ᄏa
-咖	ᄏa
-卡	ᄏa〯
-楷	ᄏa〯
-快	ᄏa
-茄	ᄁa〮
-伽	ᄁa〮
-笳	ᄁa〮
-珈	ᄁa〮
-迦	ᄁa〮
-解	ᄁa〯
-骱	ᄁa〯
-芽	ᅌa〮
-牙	ᅌa〮
-蚜	ᅌa〮
-衙	ᅌa〮
-捱	ᅌa〮
-外	ᅌa〯
-砑	ᅌa〯
-哈	ᄒa
-疨	ᄒa
-煆	ᄒa
-颬	ᄒa
-蟹	ᄒa〯
-澥	ᄒa〯
-鞋	ᄋa〮
-也	ᄋa〮
-挨	a
-阿	a
-啊	a
-矮	a〯
-㢊	a〯
+柴	싸〮
+㾹	싸〮
+射	싸〯
+惹	싸〯
+丈	ᅑᅡ〯
+加	가
+枷	가
+袈	가
+痂	가
+家	가
+階	가
+嘉	가
+葭	가
+街	가
+傢	가
+跏	가
+假	가〯
+假	가〮
+界	가〮
+嫁	가〮
+稼	가〮
+解	가〮
+戒	가〮
+屆	가〮
+架	가〮
+駕	가〮
+介	가〮
+價	가〮
+芥	가〮
+疥	가〮
+尬	가〮
+蚧	가〮
+揩	카
+咖	카
+卡	카〯
+楷	카〯
+快	카
+茄	까〮
+伽	까〮
+笳	까〮
+珈	까〮
+迦	까〮
+解	까〯
+骱	까〯
+芽	ᅌᅡ〮
+牙	ᅌᅡ〮
+蚜	ᅌᅡ〮
+衙	ᅌᅡ〮
+捱	ᅌᅡ〮
+外	ᅌᅡ〯
+砑	ᅌᅡ〯
+哈	하
+疨	하
+煆	하
+颬	하
+蟹	하〯
+澥	하〯
+鞋	아〮
+也	아〮
+挨	ᅙᅡ
+阿	ᅙᅡ
+啊	ᅙᅡ
+矮	ᅙᅡ〯
+㢊	ᅙᅡ〯
 爹	댜
 嗲	댜〯
 嗟	쟈
@@ -1764,7 +1764,7 @@
 社	ᄊᆞ〯
 射	ᄊᆞ〯
 麝	ᄊᆞ〮
-乍	ᄊᆞ〯
+乍	ᄍᆞ〯
 瓜	ᄀᆞ
 剮	ᄀᆞ〯
 寡	ᄀᆞ〯
@@ -1970,7 +1970,7 @@
 操	초
 抄	초
 鈔	초
-超	초
+超	ᅕᅩ
 草	초〯
 吵	초〯
 炒	초〯
@@ -1982,7 +1982,7 @@
 耖	초〮
 騷	소
 臊	소
-燒	소
+燒	ᄾᅩ
 艄	소
 筲	소
 梢	소
@@ -1992,39 +1992,39 @@
 睄	소
 掃	소〯
 嫂	소〯
-少	소〯
-少	소〮
+少	ᄾᅩ〯
+少	ᄾᅩ〮
 掃	소〮
 燥	소〮
 哨	소〮
-曹	쏘〮
-槽	쏘〮
-嘈	쏘〮
-漕	쏘〮
-朝	쏘〮
-潮	쏘〮
-嘲	쏘〮
-韶	쏘〮
-巢	쏘〮
-饒	쏘〮
-晁	쏘〮
-蟯	쏘〮
+曹	쪼〮
+槽	쪼〮
+嘈	쪼〮
+漕	쪼〮
+朝	ᅑᅩ〮
+潮	ᅑᅩ〮
+嘲	ᅑᅩ〮
+韶	ᄿᅩ〮
+巢	ᄿᅩ〮
+饒	ᄿᅩ〮
+晁	ᄿᅩ〮
+蟯	ᄿᅩ〮
 䐬	쏘〮
-晁	쏘〮
-召	쏘〯
-紹	쏘〯
-邵	쏘〯
-造	쏘〯
-皂	쏘〯
-皁	쏘〯
-唕	쏘〯
-趙	쏘〯
-兆	쏘〯
-肇	쏘〯
-擾	쏘〯
-嬈	쏘〯
-繞	쏘〯
-棹	쏘〯
+晁	ᄿᅩ〮
+召	ᅑᅩ〯
+紹	ᄿᅩ〯
+邵	ᄿᅩ〯
+造	쪼〯
+皂	쪼〯
+皁	쪼〯
+唕	쪼〯
+趙	ᅑᅩ〯
+兆	ᅑᅩ〯
+肇	ᅑᅩ〯
+擾	ᄿᅩ〯
+嬈	ᄿᅩ〯
+繞	ᄿᅩ〯
+棹	ᄿᅩ〯
 高	고
 篙	고
 膏	고
@@ -2464,9 +2464,9 @@
 抽	ᄎᆕ
 惆	ᄎᆕ
 瘳	ᄎᆕ
-丑	ᄎᆕ〯
-瞅	ᄎᆕ〯
-臭	ᄎᆕ〮
+丑	ᅕᆕ〯
+瞅	ᅕᆕ〯
+臭	ᅕᆕ〮
 湊	ᄎᆕ〮
 嗾	ᄎᆕ〮
 餿	ᄉᆕ
@@ -2475,7 +2475,7 @@
 颼	ᄉᆕ
 艘	ᄉᆕ
 溲	ᄉᆕ
-收	ᄉᆕ
+收	ᄾᆕ
 修	ᄉᆕ
 羞	ᄉᆕ
 饈	ᄉᆕ
@@ -2483,50 +2483,50 @@
 擻	ᄉᆕ〯
 藪	ᄉᆕ〯
 叟	ᄉᆕ〯
-手	ᄉᆕ〯
-首	ᄉᆕ〯
-守	ᄉᆕ〯
+手	ᄾᆕ〯
+首	ᄾᆕ〯
+守	ᄾᆕ〯
 溲	ᄉᆕ〯
 嗽	ᄉᆕ〮
 漱	ᄉᆕ〮
 瘦	ᄉᆕ〮
-獸	ᄉᆕ〮
-狩	ᄉᆕ〮
+獸	ᄾᆕ〮
+狩	ᄾᆕ〮
 秀	ᄉᆕ〮
 鏽	ᄉᆕ〮
 繡	ᄉᆕ〮
 宿	ᄉᆕ〮
 舍	ᄉᆕ〮
-綢	ᄊᆕ〮
-稠	ᄊᆕ〮
-仇	ᄊᆕ〮
-讎	ᄊᆕ〮
-愁	ᄊᆕ〮
-籌	ᄊᆕ〮
-疇	ᄊᆕ〮
-儔	ᄊᆕ〮
-躊	ᄊᆕ〮
-酬	ᄊᆕ〮
-讎	ᄊᆕ〮
-柔	ᄊᆕ〮
-揉	ᄊᆕ〮
-蹂	ᄊᆕ〮
-酋	ᄊᆕ〮
-遒	ᄊᆕ〮
-揂	ᄊᆕ〮
-囚	ᄊᆕ〮
-泅	ᄊᆕ〮
+綢	ᅑᆕ〮
+稠	ᅑᆕ〮
+仇	ᅑᆕ〮
+讎	ᅑᆕ〮
+愁	ᄍᆕ〮
+籌	ᅑᆕ〮
+疇	ᅑᆕ〮
+儔	ᅑᆕ〮
+躊	ᅑᆕ〮
+酬	ᅑᆕ〮
+讎	ᅑᆕ〮
+柔	ᅑᆕ〮
+揉	ᅑᆕ〮
+蹂	ᅑᆕ〮
+酋	ᅑᆕ〮
+遒	ᅑᆕ〮
+揂	ᅑᆕ〮
+囚	ᄍᆕ〮
+泅	ᄍᆕ〮
 紬	ᄊᆕ〮
-壽	ᄊᆕ〯
-受	ᄊᆕ〯
-授	ᄊᆕ〯
-綬	ᄊᆕ〯
-售	ᄊᆕ〯
-紂	ᄊᆕ〯
-宙	ᄊᆕ〯
-胄	ᄊᆕ〯
-就	ᄊᆕ〯
-鷲	ᄊᆕ〯
+壽	ᄿᆕ〯
+受	ᄿᆕ〯
+授	ᄿᆕ〯
+綬	ᄿᆕ〯
+售	ᅑᆕ〯
+紂	ᅑᆕ〯
+宙	ᅑᆕ〯
+胄	ᅑᆕ〯
+就	ᅑᆕ〯
+鷲	ᅑᆕ〯
 袖	ᄊᆕ〯
 岫	ᄊᆕ〯
 社	ᄊᆕ〯
@@ -3074,25 +3074,25 @@
 隨	쌔〮
 隋	쌔〮
 遂	쌔〮
-垂	쌔〮
-錘	쌔〮
-陲	쌔〮
-捶	쌔〮
-才	쌔〮
-纔	싼〮
-豺	쌔〮
-財	쌔〮
-材	쌔〮
-裁	쌔〮
-殘	쌔〮
-饞	싼〮
-讒	싼〮
-篅	쌔〮
-瀺	싼〮
-巉	싼〮
+垂	ᅑᅢ〮
+錘	ᅑᅢ〮
+陲	ᅑᅢ〮
+捶	ᅑᅢ〮
+才	째〮
+纔	짠〮
+豺	째〮
+財	째〮
+材	째〮
+裁	째〮
+殘	째〮
+饞	짠〮
+讒	짠〮
+篅	째〮
+瀺	짠〮
+巉	짠〮
 儕	쌔〮
-槌	쌔〮 
-潺	쌔〮
+槌	ᅑᅢ〮 
+潺	ᅑᅢ〮
 柴	쌔〮
 慚	쌔〮
 遂	쌔〯
@@ -3101,30 +3101,30 @@
 穂	쌔〯
 誰	쌔〯
 睡	쌔〯
-粹	쌔〯
-萃	쌔〯
-瘁	쌔〯
-悴	쌔〯
-粹	쌔〯
-罪	쌔〯
-墜	쌔〯
+粹	째〯
+萃	째〯
+瘁	째〯
+悴	째〯
+粹	째〯
+罪	째〯
+墜	째〯
 銳	쌔〯
 瑞	쌔〯
 蕊	쌔〯
 芮	쌔〯
 睿	쌔〯
-在	쌔〯
-載	쌔〯
-寨	쌔〯
-殘	싼〯
-棧	싼〯
-慚	싼〯
-暫	싼〯
-湛	싼〯
-站	싼〯
-賺	싼〯
-綻	싼〯
-灒	싼〯
+在	째〯
+載	째〯
+寨	째〯
+殘	짠〯
+棧	짠〯
+慚	짠〯
+暫	짠〯
+湛	짠〯
+站	짠〯
+賺	짠〯
+綻	짠〯
+灒	짠〯
 該	개
 賅	개
 垓	개
@@ -3408,21 +3408,21 @@
 綫	션〮
 線	션〮
 霰	션〮
-錢	쎤〮
-前	쎤〮
-撏	쎤〮
-潛	쎤〮
-全	쎤〮
-痊	쎤〮
-泉	쎤〮
+錢	쪈〮
+前	쪈〮
+撏	쪈〮
+潛	쪈〮
+全	쪈〮
+痊	쪈〮
+泉	쪈〮
 旋	쎤〮
 漩	쎤〮
 璿	쎤〮
 檈	쎤〮
-賤	쎤〯
-踐	쎤〯
-餞	쎤〯
-漸	쎤〯
+賤	쪈〯
+踐	쪈〯
+餞	쪈〯
+漸	쪈〯
 羨	쎤〯
 兼	견
 搛	견
@@ -3915,70 +3915,70 @@
 餐	천
 躥	천
 攛	천
-穿	천
-川	천
+穿	ᅕᅥᆫ
+川	ᅕᅥᆫ
 䱗	천
 汆	천
 詀	천
 慘	천〯
-喘	천〯
-舛	천〯
+喘	ᅕᅥᆫ〯
+舛	ᅕᅥᆫ〯
 纂	천〯
-串	천〮
+串	ᅕᅥᆫ〮
 竄	천〮
 篡	천〮
 爨	천〮
-釧	천〮
-閂	선
-扇	선
+釧	ᅕᅥᆫ〮
+閂	ᄾᅥᆫ
+扇	ᄾᅥᆫ
 酸	선
 痠	선
-拴	선
-栓	선
-膻	선
-羶	선
+拴	ᄾᅥᆫ
+栓	ᄾᅥᆫ
+膻	ᄾᅥᆫ
+羶	ᄾᅥᆫ
 狻	선
-扇	선〯
-陝	선〯
-閃	선〯
+扇	ᄾᅥᆫ〯
+陝	ᄾᅥᆫ〯
+閃	ᄾᅥᆫ〯
 糂	선〯
-扇	선〮
-煽	선〮
-苫	선〮
+扇	ᄾᅥᆫ〮
+煽	ᄾᅥᆫ〮
+苫	ᄾᅥᆫ〮
 算	선〮
 蒜	선〮
-蠶	썬〮
-禪	썬〮
-嬋	썬〮
-蟬	썬〮
-蟾	썬〮
+蠶	쩐〮
+禪	ᄿᅥᆫ〮
+嬋	ᄿᅥᆫ〮
+蟬	ᄿᅥᆫ〮
+蟾	ᅑᅥᆫ〮
 然	썬〮
 燃	썬〮
-船	썬〮
-傳	썬〮
+船	ᄿᅥᆫ〮
+傳	ᅑᅥᆫ〮
 椽	썬〮
-纏	썬〮
+纏	ᅑᅥᆫ〮
 髥	썬〮
 髯	썬〮
 纏	썬〯
-單	썬〯
-禪	썬〯
-闡	썬〯
-善	썬〯
-鱔	썬〯
-蟮	썬〯
-繕	썬〯
-膳	썬〯
-墡	썬〯
+單	ᄿᅥᆫ〯
+禪	ᄿᅥᆫ〯
+闡	ᄿᅥᆫ〯
+善	ᄿᅥᆫ〯
+鱔	ᄿᅥᆫ〯
+蟮	ᄿᅥᆫ〯
+繕	ᄿᅥᆫ〯
+膳	ᄿᅥᆫ〯
+墡	ᄿᅥᆫ〯
 擅	썬〯
 贍	썬〯
 冉	썬〯
 染	썬〯
-傳	썬〯
-篆	썬〯
-攢	썬〯
-撰	썬〯
-饌	썬〯
+傳	ᅑᅥᆫ〯
+篆	ᅑᅥᆫ〯
+攢	쩐〯
+撰	ᅑᅥᆫ〯
+饌	ᅑᅥᆫ〯
 乾	건
 肝	건
 竿	건
@@ -4277,29 +4277,29 @@
 笙	생
 聲	생
 省	생〯
-長	쌩〮
-常	쌩〮
-嫦	쌩〮
-嘗	쌩〮
-嚐	쌩〮
-場	쌩〮
-腸	쌩〮
-澄	쌩〮
-橙	쌩〮
+長	ᅑᅢᆼ〮
+常	ᅑᅢᆼ〮
+嫦	ᅑᅢᆼ〮
+嘗	ᅑᅢᆼ〮
+嚐	ᅑᅢᆼ〮
+場	ᅑᅢᆼ〮
+腸	ᅑᅢᆼ〮
+澄	쨍〮
+橙	쨍〮
 禳	쌩〮
 穰	쌩〮
 塍	쌩〮
 尚	쌩〯
-丈	쌩〯
-杖	쌩〯
-仗	쌩〯
+丈	ᅑᅢᆼ〯
+杖	ᅑᅢᆼ〯
+仗	ᅑᅢᆼ〯
 上	쌩〯
 讓	쌩〯
 壤	쌩〯
 嚷	쌩〯
 攘	쌩〯
 瓤	쌩〯
-盛	쌩〯
+盛	ᅑᅢᆼ〯
 剩	쌩〯
 鋥	쌩〯
 䂻	쌩〯
@@ -4378,10 +4378,10 @@
 詳	썅〮
 翔	썅〮
 庠	썅〮
-牆	썅〮
-薔	썅〮
-檣	썅〮
-嬙	썅〮
+牆	쨩〮
+薔	쨩〮
+檣	쨩〮
+嬙	쨩〮
 象	썅〯
 像	썅〯
 橡	썅〯
@@ -4602,50 +4602,50 @@
 滄	창
 傖	창
 艙	창
-瘡	창
+瘡	ᅕᅡᆼ
 閶	창
 猖	창
-窗	창
-闖	창〯
+窗	ᅕᅡᆼ
+闖	ᅕᅡᆼ〯
 唱	창〮
 創	창〮
 愴	창〮
 桑	상
 喪	상
-商	상
+商	ᄾᅡᆼ
 傷	상
 殤	상
 觴	상
-雙	상
-霜	상
+雙	ᄾᅡᆼ
+霜	ᄾᅡᆼ
 孀	상
-礵	상
+礵	ᄾᅡᆼ
 嗓	상〯
 賞	상〯
 償	상〯
-爽	상〯
-漺	상〯
-塽	상〯
+爽	ᄾᅡᆼ〯
+漺	ᄾᅡᆼ〯
+塽	ᄾᅡᆼ〯
 喪	상〮
 裳	쌍〮
-嘗	쌍〮
-嚐	쌍〮
-償	쌍〮
-牀	쌍〮
-床	쌍〮
-噇	쌍〮
-藏	쌍〮
-藏	쌍〯
-臟	쌍〯
-腸	쌍〯
+嘗	짱〮
+嚐	짱〮
+償	짱〮
+牀	ᅑᅡᆼ〮
+床	ᅑᅡᆼ〮
+噇	짱〮
+藏	짱〮
+藏	짱〯
+臟	짱〯
+腸	ᅑᅡᆼ〯
 上	쌍〯
 尚	쌍〯
 緔	쌍〯
 鞝	쌍〯
-撞	쌍〯
-幢	쌍〯
-僮	쌍〯
-狀	쌍〯
+撞	ᅑᅡᆼ〯
+幢	ᅑᅡᆼ〯
+僮	ᅑᅡᆼ〯
+狀	ᅑᅡᆼ〯
 岡	강
 鋼	강
 剛	강
@@ -4959,9 +4959,9 @@
 琛	층
 皴	층
 村	층
-春	층
+春	ᅕᅳᆼ
 椿	층
-稱	층
+稱	ᅕᅳᆼ
 瞠	층
 撐	층
 蟶	층
@@ -4969,28 +4969,28 @@
 琤	층
 噌	층
 嗔	층
-蠢	층〯
-逞	층〯
+蠢	ᅕᅳᆼ〯
+逞	ᅕᅳᆼ〯
 騁	층〯
 忖	층〯
 磣	층〯
 寸	층〮
 襯	층〮
-趁	층〮
-秤	층〮
-稱	층〮
+趁	ᅕᅳᆼ〮
+秤	ᅕᅳᆼ〮
+稱	ᅕᅳᆼ〮
 乘	층〮
 䞋	층〮
 讖	층〮
 櫬	층〮
 森	승
-深	승
-身	승
-申	승
-伸	승
-呻	승
-紳	승
-砷	승
+深	ᄾᅳᆼ
+身	ᄾᅳᆼ
+申	ᄾᅳᆼ
+伸	ᄾᅳᆼ
+呻	ᄾᅳᆼ
+紳	ᄾᅳᆼ
+砷	ᄾᅳᆼ
 莘	승
 參	승
 蔘	승
@@ -4998,71 +4998,71 @@
 猻	승
 蓀	승
 僧	승
-生	승
-笙	승
-牲	승
+生	ᄾᅳᆼ
+笙	ᄾᅳᆼ
+牲	ᄾᅳᆼ
 甥	승
-聲	승
-升	승
-昇	승
-娠	승
-沈	승〯
-審	승〯
-嬸	승〯
+聲	ᄾᅳᆼ
+升	ᄾᅳᆼ
+昇	ᄾᅳᆼ
+娠	ᄾᅳᆼ
+沈	ᄾᅳᆼ〯
+審	ᄾᅳᆼ〯
+嬸	ᄾᅳᆼ〯
 筍	승〯
 榫	승〯
 損	승〯
-省	승〯
+省	ᄾᅳᆼ〯
 哂	승〯
 滲	승〮
 遜	승〮
-舜	승〮
-瞬	승〮
-勝	승〮
-聖	승〮
-抻	승〮
+舜	ᄾᅳᆼ〮
+瞬	ᄾᅳᆼ〮
+勝	ᄾᅳᆼ〮
+聖	ᄾᅳᆼ〮
+抻	ᄾᅳᆼ〮
 巽	승〮
-岑	씅〮
-陳	씅〮
-辰	씅〮
-晨	씅〮
-宸	씅〮
-唇	씅〮
-脣	씅〮
-沉	씅〮
-忱	씅〮
-塵	씅〮
-臣	씅〮
+岑	쯩〮
+陳	ᅑᅳᆼ〮
+辰	ᄿᅳᆼ〮
+晨	ᅑᅳᆼ〮
+宸	ᅑᅳᆼ〮
+唇	ᅑᅳᆼ〮
+脣	ᅑᅳᆼ〮
+沉	ᅑᅳᆼ〮
+忱	ᅑᅳᆼ〮
+塵	ᅑᅳᆼ〮
+臣	ᅑᅳᆼ〮
 神	씅〮
 人	씅〮
 仁	씅〮
 任	씅〮
-存	씅〮
-純	씅〮
-蓴	씅〮
-淳	씅〮
-醇	씅〮
-鶉	씅〮
-層	씅〮
+存	쯩〮
+純	ᅑᅳᆼ〮
+蓴	ᅑᅳᆼ〮
+淳	ᅑᅳᆼ〮
+醇	ᅑᅳᆼ〮
+鶉	ᅑᅳᆼ〮
+層	쯩〮
 繩	씅〮
-呈	씅〮
-程	씅〮
-成	씅〮
-誠	씅〮
-城	씅〮
-乘	씅〮
+呈	ᅑᅳᆼ〮
+程	ᅑᅳᆼ〮
+成	ᅑᅳᆼ〮
+誠	ᅑᅳᆼ〮
+城	ᅑᅳᆼ〮
+乘	ᅑᅳᆼ〮
 盛	씅〮
-承	씅〮
-丞	씅〮
-懲	씅〮
-澄	씅〮
-橙	씅〮
-鄭	씅〮
+承	ᅑᅳᆼ〮
+丞	ᅑᅳᆼ〮
+懲	쯩〮
+澄	쯩〮
+橙	쯩〮
+鄭	ᅑᅳᆼ〮
 仍	씅〮
-曾	씅〮
+曾	쯩〮
 塍	씅〮
-陣	씅〯
-朕	씅〯
+陣	ᅑᅳᆼ〯
+朕	ᅑᅳᆼ〯
 甚	씅〯
 慎	씅〯
 腎	씅〯
@@ -5088,7 +5088,7 @@
 嵊	씅〯
 盛	씅〯
 稔	씅〯
-䫈	씅〯
+䫈	쯩〯
 根	긍
 跟	긍
 更	긍
@@ -5346,7 +5346,7 @@
 姓	셩〮
 性	셩〮
 詢	셩〮
-秦	쎵〮
+秦	쪙〮
 尋	쎵〮
 潯	쎵〮
 旬	쎵〮
@@ -5358,19 +5358,19 @@
 巡	쎵〮
 馴	쎵〮
 循	쎵〮
-晴	쎵〮
-情	쎵〮
+晴	쪙〮
+情	쪙〮
 餳	쎵〮
-盡	쎵〯
-儘	쎵〯
-燼	쎵〯
+盡	쪙〯
+儘	쪙〯
+燼	쪙〯
 蕈	쎵〯
-靜	쎵〯
-靖	쎵〯
-淨	쎵〯
-阱	쎵〯
-穽	쎵〯
-靚	쎵〯
+靜	쪙〯
+靖	쪙〯
+淨	쪙〯
+阱	쪙〯
+穽	쪙〯
+靚	쪙〯
 金	경
 今	경
 矜	경
@@ -5770,17 +5770,17 @@
 蔥	총
 囪	총
 鏓	총
-充	총
-衝	총
-沖	총
-忡	총
+充	ᅕᅩᆼ
+衝	ᅕᅩᆼ
+沖	ᅕᅩᆼ
+忡	ᅕᅩᆼ
 穹	총
 憧	총
 琮	총
 淙	총
-寵	총〯
-𥅻	총〮
-銃	총〮
+寵	ᅕᅩᆼ〯
+𥅻	ᅕᅩᆼ〮
+銃	ᅕᅩᆼ〮
 蹱	총〮
 松	송
 鬆	송
@@ -5796,23 +5796,23 @@
 宋	송〮
 送	송〮
 慫	송〮
-從	쏭〮
-叢	쏭〮
-蟲	쏭〮
-重	쏭〮
-崇	쏭〮
-戎	쏭〮
-茸	쏭〮
-𩞉	쏭〮
-重	쏭〯
-𨉢	쏭〯
-從	쏭〯
-仲	쏭〯
-訟	쏭〯
-頌	쏭〯
-誦	쏭〯
-冗	쏭〯
-宂	쏭〯
+從	쫑〮
+叢	쫑〮
+蟲	ᅑᅩᆼ〮
+重	ᅑᅩᆼ〮
+崇	쫑〮
+戎	쫑〮
+茸	쫑〮
+𩞉	쫑〮
+重	ᅑᅩᆼ〯
+𨉢	ᅑᅩᆼ〯
+從	쫑〯
+仲	ᅑᅩᆼ〯
+訟	쫑〯
+頌	쫑〯
+誦	쫑〯
+冗	쫑〯
+宂	쫑〯
 工	공
 功	공
 攻	공
@@ -6016,13 +6016,13 @@
 霎	삳
 箑	삳
 卅	삳
-雜	싿
+雜	짣
 炸	싿
-閘	싿
+閘	짣
 鍘	싿
 煠	싿
-𧼰	싿
-𧾓	싿
+𧼰	짣
+𧾓	짣
 夾	갇
 浹	갇
 唊	갇
@@ -6132,13 +6132,13 @@
 石	쌕
 碩	쌕
 擲	쌕
-着	쌕
-芍	쌕
-弱	쌕
+着	ᅑᅢᆨ
+芍	ᄿᅢᆨ
+弱	ᄿᅢᆨ
 若	쌕
-澤	쌕
-宅	쌕
-翟	쌕
+澤	짹
+宅	ᅑᅢᆨ
+翟	ᅑᅢᆨ
 格	객
 骼	객
 隔	객
@@ -6162,7 +6162,7 @@
 皵	챡
 雀	챡
 削	샥
-嚼	쌱
+嚼	쨕
 腳	갹
 卻	캭
 榷	캭
@@ -6300,10 +6300,10 @@
 熾	측
 叱	측
 敕	측
-飭	측
+飭	ᅕᅳᆨ
 撮	측
 猝	측
-出	측
+出	ᅕᅳᆨ
 齣	측
 絀	측
 黜	측
@@ -6347,37 +6347,37 @@
 設	슥
 飾	슥
 趿	슥
-十	쓱
-什	쓱
-拾	쓱
+十	ᄿᅳᆨ
+什	ᄿᅳᆨ
+拾	ᄿᅳᆨ
 石	쓱
-蝕	쓱
-實	쓱
-食	쓱
+蝕	ᄿᅳᆨ
+實	ᄿᅳᆨ
+食	ᄿᅳᆨ
 擇	쓱
 澤	쓱
-賊	쓱
-舌	쓱
+賊	쯕
+舌	ᄿᅳᆨ
 涉	쓱
-折	쓱
-蜇	쓱
-蟄	쓱
-熱	쓱
-直	쓱
-值	쓱
-植	쓱
-殖	쓱
-擲	쓱
-躑	쓱
-秩	쓱
-日	쓱
+折	ᅑᅳᆨ
+蜇	ᅑᅳᆨ
+蟄	ᅑᅳᆨ
+熱	ᄿᅳᆨ
+直	ᅑᅳᆨ
+值	ᅑᅳᆨ
+植	ᅑᅳᆨ
+殖	ᅑᅳᆨ
+擲	ᅑᅳᆨ
+躑	ᅑᅳᆨ
+秩	ᅑᅳᆨ
+日	ᄿᅳᆨ
 術	쓱
 述	쓱
-入	쓱
+入	ᄿᅳᆨ
 碩	쓱
-雜	쓱
-𦽒	쓱
-侄	쓱
+雜	쯕
+𦽒	쯕
+侄	ᅑᅳᆨ
 個	극
 革	극
 緙	극
@@ -6632,17 +6632,17 @@
 媟	셕
 屧	셕
 楔	셕
-截	쎡
-捷	쎡
-睫	쎡
-婕	쎡
-集	쎡
-寂	쎡
-藉	쎡
-籍	쎡
-疾	쎡
-嫉	쎡
-蒺	쎡
+截	쪅
+捷	쪅
+睫	쪅
+婕	쪅
+集	쪅
+寂	쪅
+藉	쪅
+籍	쪅
+疾	쪅
+嫉	쪅
+蒺	쪅
 席	쎡
 蓆	쎡
 習	쎡
@@ -7027,11 +7027,11 @@
 簇	촉
 蹙	촉
 蹴	촉
-觸	촉
-畜	촉
-搐	촉
-矗	촉
-擉	촉
+觸	ᅕᅩᆨ
+畜	ᅕᅩᆨ
+搐	ᅕᅩᆨ
+矗	ᅕᅩᆨ
+擉	ᅕᅩᆨ
 肏	촉
 索	속
 嗦	속
@@ -7053,39 +7053,39 @@
 嗽	속
 夙	속
 謖	속
-叔	속
+叔	ᄾᅩᆨ
 菽	속
 束	속
 倏	속
-昨	쏙
-濁	쏙
+昨	쪽
+濁	ᅑᅩᆨ
 蜀	쏙
-鐲	쏙
-躅	쏙
-啄	쏙
-逐	쏙
-擢	쏙
-濯	쏙
-族	쏙
+鐲	ᅑᅩᆨ
+躅	ᅑᅩᆨ
+啄	ᅑᅩᆨ
+逐	ᅑᅩᆨ
+擢	ᅑᅩᆨ
+濯	ᅑᅩᆨ
+族	쪽
 俗	쏙
-贖	쏙
-續	쏙
-淑	쏙
-孰	쏙
-塾	쏙
-熟	쏙
-屬	쏙
-辱	쏙
-褥	쏙
-縟	쏙
-溽	쏙
+贖	ᄿᅩᆨ
+續	ᄿᅩᆨ
+淑	ᄿᅩᆨ
+孰	ᄿᅩᆨ
+塾	ᄿᅩᆨ
+熟	ᄿᅩᆨ
+屬	ᄿᅩᆨ
+辱	ᄿᅩᆨ
+褥	ᄿᅩᆨ
+縟	ᄿᅩᆨ
+溽	ᄿᅩᆨ
 妯	쏙
-鑿	쏙
+鑿	쪽
 勺	쏙
-浞	쏙
-㪬	쏙
-𧮙	쏙
-射	쏙
+浞	쪽
+㪬	쪽
+𧮙	쪽
+射	ᄿᅩᆨ
 郭	곡
 槨	곡
 廓	곡
