--- a/soochowjamo.yaml
+++ b/soochowjamo.yaml
@@ -1,5 +1,5 @@
-#蘇州閒話正音表格 수ᄌᆕ안ᄋᆞ증영뵤객
-#作者: cathaylab 吳非中 작재: cathaylab 으ᄫᅵ종
+#蘇州閒話正音表格 수ᅐᆕ안ᄋᆞᅐᅳᆼ영뵤객
+#作者: cathaylab 吳非中 작재: cathaylab 으ᄫᅵᅐᅩᆼ
 #version: 2025/11/06
 資	즈
 姿	즈
@@ -110,67 +110,67 @@
 字	쓰〯
 墅	쓰〯
 自	쓰〯
-之	제
-芝	제
-知	제
-支	제
-肢	제
-枝	제
-吱	제
-豬	제
-諸	제
-朱	제
-蛛	제
-珠	제
-株	제
-侏	제
-茱	제
-銖	제
-誅	제
-硃	제
-洙	제
-姝	제
-梔	제
-脂	제
-酯	제
-旨	제〯
-指	제〯
-止	제〯
-趾	제〯
-址	제〯
-芷	제〯
-祉	제〯
-主	제〯
-炷	제〯
-拄	제〯
-煮	제〯
-渚	제〯
-嘴	제〯
-咫	제〯
-志	제〮
-誌	제〮
-痣	제〮
-制	제〮
-製	제〮
-智	제〮
-至	제〮
-致	제〮
-緻	제〮
-置	제〮
-質	제〮
-炙	제〮
-摯	제〮
-鷙	제〮
-幟	제〮
-熾	제〮
-注	제〮
-註	제〮
-駐	제〮
-疰	제〮
-蛀	제〮
-著	제〮
-翥	제〮
-鑄	제〮
+之	ᅐᅦ
+芝	ᅐᅦ
+知	ᅐᅦ
+支	ᅐᅦ
+肢	ᅐᅦ
+枝	ᅐᅦ
+吱	ᅐᅦ
+豬	ᅐᅦ
+諸	ᅐᅦ
+朱	ᅐᅦ
+蛛	ᅐᅦ
+珠	ᅐᅦ
+株	ᅐᅦ
+侏	ᅐᅦ
+茱	ᅐᅦ
+銖	ᅐᅦ
+誅	ᅐᅦ
+硃	ᅐᅦ
+洙	ᅐᅦ
+姝	ᅐᅦ
+梔	ᅐᅦ
+脂	ᅐᅦ
+酯	ᅐᅦ
+旨	ᅐᅦ〯
+指	ᅐᅦ〯
+止	ᅐᅦ〯
+趾	ᅐᅦ〯
+址	ᅐᅦ〯
+芷	ᅐᅦ〯
+祉	ᅐᅦ〯
+主	ᅐᅦ〯
+炷	ᅐᅦ〯
+拄	ᅐᅦ〯
+煮	ᅐᅦ〯
+渚	ᅐᅦ〯
+嘴	ᅐᅦ〯
+咫	ᅐᅦ〯
+志	ᅐᅦ〮
+誌	ᅐᅦ〮
+痣	ᅐᅦ〮
+制	ᅐᅦ〮
+製	ᅐᅦ〮
+智	ᅐᅦ〮
+至	ᅐᅦ〮
+致	ᅐᅦ〮
+緻	ᅐᅦ〮
+置	ᅐᅦ〮
+質	ᅐᅦ〮
+炙	ᅐᅦ〮
+摯	ᅐᅦ〮
+鷙	ᅐᅦ〮
+幟	ᅐᅦ〮
+熾	ᅐᅦ〮
+注	ᅐᅦ〮
+註	ᅐᅦ〮
+駐	ᅐᅦ〮
+疰	ᅐᅦ〮
+蛀	ᅐᅦ〮
+著	ᅐᅦ〮
+翥	ᅐᅦ〮
+鑄	ᅐᅦ〮
 癡	ᅕᅦ
 蚩	ᅕᅦ
 嗤	ᅕᅦ
@@ -1947,9 +1947,9 @@
 糟	조
 遭	조
 搔	조
-招	조
-昭	조
-朝	조
+招	ᅐᅩ
+昭	ᅐᅩ
+朝	ᅐᅩ
 找	조
 釗	조
 抓	조
@@ -1963,9 +1963,9 @@
 沼	조〯
 灶	조〮
 竈	조〮
-照	조〮
+照	ᅐᅩ〮
 罩	조〮
-詔	조〮
+詔	ᅐᅩ〮
 躁	조〮
 操	초
 抄	초
@@ -2434,28 +2434,28 @@
 瘻	ᄅᆕ〯
 簍	ᄅᆕ〯
 綹	ᄅᆕ〯
-周	ᄌᆕ
-週	ᄌᆕ
-賙	ᄌᆕ
+周	ᅐᆕ
+週	ᅐᆕ
+賙	ᅐᆕ
 鄒	ᄌᆕ
 謅	ᄌᆕ
-州	ᄌᆕ
-洲	ᄌᆕ
-舟	ᄌᆕ
-倜	ᄌᆕ
+州	ᅐᆕ
+洲	ᅐᆕ
+舟	ᅐᆕ
+倜	ᅐᆕ
 揪	ᄌᆕ
 走	ᄌᆕ〯
-肘	ᄌᆕ〯
+肘	ᅐᆕ〯
 酒	ᄌᆕ〯
 者	ᄌᆕ〯
-帚	ᄌᆕ〯
-箒	ᄌᆕ〯
+帚	ᅐᆕ〯
+箒	ᅐᆕ〯
 皺	ᄌᆕ〮
 縐	ᄌᆕ〮
-咒	ᄌᆕ〮
+咒	ᅐᆕ〮
 奏	ᄌᆕ〮
 揍	ᄌᆕ〮
-晝	ᄌᆕ〮
+晝	ᅐᆕ〮
 秋	ᄎᆕ
 鞦	ᄎᆕ
 鰍	ᄎᆕ
@@ -3886,26 +3886,26 @@
 卵	런〯
 亂	런〯
 簪	전
-詹	전
-瞻	전
-占	전
-氈	전
-粘	전
-沾	전
+詹	ᅐᅥᆫ
+瞻	ᅐᅥᆫ
+占	ᅐᅥᆫ
+氈	ᅐᅥᆫ
+粘	ᅐᅥᆫ
+沾	ᅐᅥᆫ
 鑽	전
-佔	전
-覘	전
-霑	전
-專	전
-磚	전
+佔	ᅐᅥᆫ
+覘	ᅐᅥᆫ
+霑	ᅐᅥᆫ
+專	ᅐᅥᆫ
+磚	ᅐᅥᆫ
 鱣	전
 顓	전
 躦	전
-展	전〯
-輾	전〯
-轉	전〯
-佔	전〮
-戰	전〮
+展	ᅐᅥᆫ〯
+輾	ᅐᅥᆫ〯
+轉	ᅐᅥᆫ〯
+佔	ᅐᅥᆫ〮
+戰	ᅐᅥᆫ〮
 顫	전〮
 鑽	전〮
 轉	전〮
@@ -4231,26 +4231,26 @@
 打	댕〯
 湯	탱
 冷	랭〯
-張	쟁
-章	쟁
-樟	쟁
-漳	쟁
-璋	쟁
-瘴	쟁
-彰	쟁
-爭	쟁
-睜	쟁
-長	쟁〯
-漲	쟁〯
-掌	쟁〯
-帳	쟁〮
-賬	쟁〮
-脹	쟁〮
-漲	쟁〮
-仗	쟁〮
-障	쟁〮
-嶂	쟁〮
-𤯡	쟁〮
+張	ᅐᅢᆼ
+章	ᅐᅢᆼ
+樟	ᅐᅢᆼ
+漳	ᅐᅢᆼ
+璋	ᅐᅢᆼ
+瘴	ᅐᅢᆼ
+彰	ᅐᅢᆼ
+爭	ᅐᅢᆼ
+睜	ᅐᅢᆼ
+長	ᅐᅢᆼ〯
+漲	ᅐᅢᆼ〯
+掌	ᅐᅢᆼ〯
+帳	ᅐᅢᆼ〮
+賬	ᅐᅢᆼ〮
+脹	ᅐᅢᆼ〮
+漲	ᅐᅢᆼ〮
+仗	ᅐᅢᆼ〮
+障	ᅐᅢᆼ〮
+嶂	ᅐᅢᆼ〮
+𤯡	ᅐᅢᆼ〮
 昌	챙
 菖	챙
 鯧	챙
@@ -4579,8 +4579,8 @@
 𧻴	랑〯
 稂	랑〯
 閬	랑〯
-莊	장
-樁	장
+莊	ᅐᅡᆼ
+樁	ᅐᅡᆼ
 髒	장
 贓	장
 臧	장
@@ -4591,12 +4591,12 @@
 漳	장
 璋	장
 𪅂	장
-裝	장
-妝	장
-奘	장
+裝	ᅐᅡᆼ
+妝	ᅐᅡᆼ
+奘	ᅐᅡᆼ
 𪄻	장
 葬	장〮
-壯	장〮
+壯	ᅐᅡᆼ〮
 倉	창
 蒼	창
 滄	창
@@ -4888,24 +4888,24 @@
 冷	릉〯
 愣	릉〯
 楞	릉〯
-真	증
-針	증
-珍	증
-斟	증
-椹	증
-甄	증
-箴	증
-榛	증
+真	ᅐᅳᆼ
+針	ᅐᅳᆼ
+珍	ᅐᅳᆼ
+斟	ᅐᅳᆼ
+椹	ᅐᅳᆼ
+甄	ᅐᅳᆼ
+箴	ᅐᅳᆼ
+榛	ᅐᅳᆼ
 臻	증
 溱	증
 蓁	증
-徵	증
-砧	증
-貞	증
-禎	증
-楨	증
-幀	증
-偵	증
+徵	ᅐᅳᆼ
+砧	ᅐᅳᆼ
+貞	ᅐᅳᆼ
+禎	ᅐᅳᆼ
+楨	ᅐᅳᆼ
+幀	ᅐᅳᆼ
+偵	ᅐᅳᆼ
 怎	증
 尊	증
 遵	증
@@ -4917,11 +4917,11 @@
 增	증
 憎	증
 𧯒	증
-蒸	증
-正	증
-征	증
-怔	증
-鉦	증
+蒸	ᅐᅳᆼ
+正	ᅐᅳᆼ
+征	ᅐᅳᆼ
+怔	ᅐᅳᆼ
+鉦	ᅐᅳᆼ
 爭	증
 箏	증
 猙	증
@@ -4930,28 +4930,28 @@
 睜	증
 錚	증
 諍	증
-枕	증〯
-鴆	증〯
-縝	증〯
-准	증〯
-準	증〯
-整	증〯
-拯	증〯
+枕	ᅐᅳᆼ〯
+鴆	ᅐᅳᆼ〯
+縝	ᅐᅳᆼ〯
+准	ᅐᅳᆼ〯
+準	ᅐᅳᆼ〯
+整	ᅐᅳᆼ〯
+拯	ᅐᅳᆼ〯
 捘	증〯
 胗	증〯
 怎	증〯
 撙	증〯
-鎮	증〮
-診	증〮
-疹	증〮
-振	증〮
-賑	증〮
-震	증〮
-正	증〮
-證	증〮
-政	증〮
-癥	증〮
-症	증〮
+鎮	ᅐᅳᆼ〮
+診	ᅐᅳᆼ〮
+疹	ᅐᅳᆼ〮
+振	ᅐᅳᆼ〮
+賑	ᅐᅳᆼ〮
+震	ᅐᅳᆼ〮
+正	ᅐᅳᆼ〮
+證	ᅐᅳᆼ〮
+政	ᅐᅳᆼ〮
+癥	ᅐᅳᆼ〮
+症	ᅐᅳᆼ〮
 圳	증〮
 甑	증〮
 參	층
@@ -5740,29 +5740,29 @@
 綜	종
 棕	종
 鬃	종
-中	종
-鍾	종
-忠	종
-盅	종
-鍾	종
-衷	종
-終	종
+中	ᅐᅩᆼ
+鍾	ᅐᅩᆼ
+忠	ᅐᅩᆼ
+盅	ᅐᅩᆼ
+鍾	ᅐᅩᆼ
+衷	ᅐᅩᆼ
+終	ᅐᅩᆼ
 騣	종
-總	종〯
-種	종〯
-腫	종〯
-塚	종〯
-冢	종〯
-踵	종〯
+總	ᅐᅩᆼ〯
+種	ᅐᅩᆼ〯
+腫	ᅐᅩᆼ〯
+塚	ᅐᅩᆼ〯
+冢	ᅐᅩᆼ〯
+踵	ᅐᅩᆼ〯
 傯	종〯
 縱	종〮
 粽	종〮
 糉	종〮
 蹤	종〮
-中	종〮
-種	종〮
-衆	종〮
-眾	종〮
+中	ᅐᅩᆼ〮
+種	ᅐᅩᆼ〮
+衆	ᅐᅩᆼ〮
+眾	ᅐᅩᆼ〮
 聰	총
 從	총
 蓯	총
@@ -6107,9 +6107,9 @@
 目	맥
 驀	맥
 隻	잭
-着	잭
-酌	잭
-灼	잭
+着	ᅐᅢᆨ
+酌	ᅐᅢᆨ
+灼	ᅐᅢᆨ
 摘	잭
 謫	잭
 籷	잭
@@ -6261,27 +6261,27 @@
 幘	즉
 則	즉
 側	즉
-折	즉
-哲	즉
-浙	즉
+折	ᅐᅳᆨ
+哲	ᅐᅳᆨ
+浙	ᅐᅳᆨ
 這	즉
-質	즉
-只	즉
-職	즉
-織	즉
-咫	즉
-汁	즉
-窒	즉
-摯	즉
-炙	즉
+質	ᅐᅳᆨ
+只	ᅐᅳᆨ
+職	ᅐᅳᆨ
+織	ᅐᅳᆨ
+咫	ᅐᅳᆨ
+汁	ᅐᅳᆨ
+窒	ᅐᅳᆨ
+摯	ᅐᅳᆨ
+炙	ᅐᅳᆨ
 卒	즉
 茁	즉
 拙	즉
 昃	즉
 仄	즉
-執	즉
-摺	즉
-褶	즉
+執	ᅐᅳᆨ
+摺	ᅐᅳᆨ
+褶	ᅐᅳᆨ
 𪐏	즉
 䐈	즉
 策	측
@@ -7013,14 +7013,14 @@
 竺	족
 築	족
 篫	족
-燭	족
-矚	족
-囑	족
-祝	족
+燭	ᅐᅩᆨ
+矚	ᅐᅩᆨ
+囑	ᅐᅩᆨ
+祝	ᅐᅩᆨ
 粥	족
 鏃	족
-𡎺	족
-斸	족
+𡎺	ᅐᅩᆨ
+斸	ᅐᅩᆨ
 戳	촉
 促	촉
 齪	촉
