--- a/shanghaijamo.yaml
+++ b/shanghaijamo.yaml
@@ -1,5 +1,6 @@
 #上海閒話正音表格 쌍해안ᄋᆞ증영뵤객
-#作者: cathaylab 吳非中 작재: 으ᄫᅵ종
+#作者: cathaylab 吳非中 작재: cathaylab 으ᄫᅵ종
+#version: 2025/11/06
 豬	즈
 知	즈
 蜘	즈
@@ -2565,7 +2566,7 @@
 又	ᅙᅲ
 悠	ᅙᅲ
 幽	ᅙᅲ
-靴	ᄒᆑ
+靴	ᄒᆑ/ᄒᆢ/혀
 浜	뱅
 繃	뱅
 蹦	뱅
