--- a/shanghaijamo.yaml
+++ b/shanghaijamo.yaml
@@ -1011,14 +1011,14 @@
 亞	ᅙᅣ
 涯	ᅙᅣ
 暇	ᅙᅣ
-剮	ᄀᆉ
-乖	ᄀᆉ
-怪	ᄀᆉ
-拐	ᄀᆉ
-柺	ᄀᆉ
-蒯	ᄏᆉ
-快	ᄏᆉ
-蛙	ᅙᆉ
+剮	과
+乖	과
+怪	과
+拐	과
+柺	과
+蒯	콰
+快	콰
+蛙	ᅙᅪ
 班	반
 斑	반
 瘢	반
@@ -2772,14 +2772,14 @@
 盲	망
 虻	망
 夢	망
-荒	ᄒᆉᆼ
-慌	ᄒᆉᆼ
-黃	ᄒᆉᆼ
+荒	황
+慌	황
+黃	황
 方	ᄫᅡᆼ
 肪	ᄫᅡᆼ
 芳	ᄫᅡᆼ
-謊	ᄒᆉᆼ
-晃	ᄒᆉᆼ
+謊	황
+晃	황
 妨	ᄫᅡᆼ
 倣	ᄫᅡᆼ
 放	ᄫᅡᆼ
@@ -2787,19 +2787,19 @@
 彷	ᄫᅡᆼ
 紡	ᄫᅡᆼ
 訪	ᄫᅡᆼ
-況	ᄒᆉᆼ
-黃	ᄋᆉᆼ
-簧	ᄋᆉᆼ
-皇	ᄋᆉᆼ
-蝗	ᄋᆉᆼ
-蟥	ᄋᆉᆼ
+況	황
+黃	왕
+簧	왕
+皇	왕
+蝗	왕
+蟥	왕
 房	ᄝᅡᆼ
-亡	ᄋᆉᆼ
-忘	ᄋᆉᆼ
-妄	ᄋᆉᆼ
-望	ᄋᆉᆼ
-王	ᄋᆉᆼ
-旺	ᄋᆉᆼ
+亡	왕
+忘	왕
+妄	왕
+望	왕
+王	왕
+旺	왕
 端	당
 當	당
 襠	당
@@ -2931,19 +2931,19 @@
 䱀	ᅙᅡᆼ
 王	ᄋᆦᆼ
 旺	ᄋᆦᆼ
-光	ᄀᆉᆼ
-廣	ᄀᆉᆼ
-廣	ᄀᆉᆼ
-逛	ᄀᆉᆼ
-曠	ᄏᆉᆼ
-匡	ᄏᆉᆼ
-筐	ᄏᆉᆼ
-眶	ᄏᆉᆼ
-礦	ᄏᆉᆼ
-狂	ᄁᆉᆼ
-汪	ᅙᆉᆼ
-枉	ᅙᆉᆼ
-往	ᅙᆉᆼ
+光	광
+廣	광
+廣	광
+逛	광
+曠	쾅
+匡	쾅
+筐	쾅
+眶	쾅
+礦	쾅
+狂	꽝
+汪	ᅙᅪᆼ
+枉	ᅙᅪᆼ
+往	ᅙᅪᆼ
 奔	븡
 錛	븡
 畚	븡
@@ -3782,12 +3782,12 @@
 捏	냗
 洽	얃
 協	얃
-括	ᄀᆉᆮ
-聒	ᄀᆉᆮ
-刮	ᄀᆉᆮ
-颳	ᄀᆉᆮ
-摑	ᄀᆉᆮ
-挖	ᅙᆉᆮ
+括	괃
+聒	괃
+刮	괃
+颳	괃
+摑	괃
+挖	ᅙᅪᆮ
 百	백
 柏	백
 伯	백
@@ -3927,9 +3927,9 @@
 握	ᅙᅡᆨ
 屋	ᅙᅡᆨ
 沃	ᅙᅡᆨ
-郭	ᄀᆉᆨ
-廓	ᄏᆉᆨ
-擴	ᄏᆉᆨ
+郭	곽
+廓	콱
+擴	콱
 掇	돋
 脫	톧
 奪	똗
