--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -812,497 +812,497 @@
 不	bôt	
 吥	bôt	
 鈈	bôt	
-叉	trã	
-岔	trã	
-扠	trã	
-杈	trã	
-碴	trã	
-衩	trã	
-鑔	trã	
-塗	trà	
-嵖	trà	
-搽	trà	
-查	trà	
-楂	trà	
-槎	trà	
-猹	trà	
-茬	trà	
-茶	trà	
-蹅	trà	
-餷	trà	
-侘	trá	
-叉	trá	
-喳	trá	
-嗏	trá	
-垞	trá	
-奼	trá	
-差	trá	
-汊	trá	
-詫	trá	
-赤	trá	
-叉	trả	
-喍	trãi	
-柴	trãi	
-瘥	trãi	
-䓱	trãi	
-豺	trài	
-嘬	trái	
-差	trái	
-搋	trái	
-猜	trái	
-瘛	trái	
-蠆	trái	
-釵	trái	
-䜺	trái	
-歪	trải	
-膪	trải	
-跐	trải	
-跴	trải	
-踩	trải	
-踹	trải	
-坼	trác	
-拆	trác	
-冊	trac	
-惻	trac	
-擦	trac	
-敇	trac	
-柵	trac	
-測	trac	
-策	trac	
-筴	trac	
-讒	tràm	
-篸	trảm	
-剗	trản	
-滻	trản	
-產	trản	
-羼	trản	
-鏟	trản	
-棖	trành	
-橙	trành	
-鋥	trành	
-䁎	trành	
-撐	tránh	
-槍	tránh	
-牚	tránh	
-睜	tránh	
-瞠	tránh	
-罉	tránh	
-蹭	tránh	
-鋥	tránh	
-鐣	tránh	
-鐺	tránh	
-䁎	tránh	
-䟓	tránh	
-巢	trào	
-皺	trào	
-窼	trào	
-剿	tráo	
-抄	tráo	
-鈔	tráo	
-吵	trảo	
-炒	trảo	
-煼	trảo	
-訬	trảo	
-扱	tráp	
-插	tráp	
-歃	tráp	
-臿	tráp	
-鍤	tráp	
-刷	tràt	
-獺	tràt	
-刷	trát	
-唰	trát	
-嚓	trát	
-擦	trát	
-攃	trát	
-礤	trát	
-礸	trát	
-䃰	trát	
-察	trat	
-檫	trat	
-唓	tré	
-奢	tré	
-硨	tré	
-車	tré	
-且	trẻ	
-尺	trẻ	
-扯	trẻ	
-撦	trẻ	
-趄	trẻ	
-跙	trẻ	
-仄	trich	
-勅	trich	
-勑	trich	
-叱	trich	
-哧	trich	
-尺	trich	
-屮	trich	
-彳	trich	
-徹	trich	
-掣	trich	
-撤	trich	
-敕	trich	
-斥	trich	
-沏	trich	
-澈	trich	
-赤	trich	
-飭	trich	
-㡿	trich	
-䃎	trich	
-𢮓	trich	
-參	trẻm	
-杉	trẻm	
-釤	trẻm	
-秤	trĩnh	
-稱	trĩnh	
-𦓬	trĩnh	
-侱	trình	
-呈	trình	
-埕	trình	
-徎	trình	
-懲	trình	
-浧	trình	
-澂	trình	
-澄	trình	
-澶	trình	
-珵	trình	
-程	trình	
-纏	trình	
-裎	trình	
-躔	trình	
-逞	trình	
-郢	trình	
-酲	trình	
-鋥	trình	
-餳	trình	
-𨙼	trình	
-偁	trính	
-稱	trính	
-穪	trính	
-拯	trỉnh	
-裎	trỉnh	
-逞	trỉnh	
-郢	trỉnh	
-騁	trỉnh	
-𩧢	trỉnh	
-尺	trễc	
-⻌	trệc	
-⻍	trệc	
-⻎	trệc	
-辵	trệc	
-辶	trệc	
-㚟	trệc	
-呎	trếc	
-尺	trếc	
-赤	trếc	
-倬	trêc	
-卓	trêc	
-焯	trêc	
-綽	trêc	
-踔	trêc	
-逴	trêc	
-鵫	trêc	
-晁	triều	
-朝	triều	
-潮	triều	
-瞅	triều	
-瞧	triều	
-鼂	triều	
-怊	triếu	
-繰	triếu	
-超	triếu	
-諂	triểm	
-蟬	triễn	
-廛	triền	
-瀍	triền	
-丈	trễnh	
-場	trềnh	
-塲	trềnh	
-澄	trềnh	
-腸	trềnh	
-萇	trềnh	
-長	trềnh	
-倀	trếnh	
-倡	trếnh	
-唱	trếnh	
-娼	trếnh	
-昌	trếnh	
-晿	trếnh	
-猖	trếnh	
-琩	trếnh	
-菖	trếnh	
-閶	trếnh	
-鯧	trếnh	
-䱽	trếnh	
-悵	trểnh	
-暢	trểnh	
-瑒	trểnh	
-鬯	trểnh	
-抽	trấu	
-瘳	trấu	
-篘	trấu	
-紬	trấu	
-轍	tret	
-峙	trĩ	
-俿	trì	
-倁	trì	
-坻	trì	
-墀	trì	
-弛	trì	
-持	trì	
-池	trì	
-疷	trì	
-竾	trì	
-筂	trì	
-箎	trì	
-篪	trì	
-胝	trì	
-蚳	trì	
-踟	trì	
-遲	trì	
-馳	trì	
-䶵	trì	
-嚏	trị	
-杘	trị	
-跮	trị	
-㗣	trị	
-侈	trí	
-呲	trí	
-啻	trí	
-嗤	trí	
-媸	trí	
-差	trí	
-幟	trí	
-旘	trí	
-滍	trí	
-熾	trí	
-癡	trí	
-眙	trí	
-眵	trí	
-笞	trí	
-絺	trí	
-翄	trí	
-翅	trí	
-翤	trí	
-翨	trí	
-胵	trí	
-茌	trí	
-蚩	trí	
-蚳	trí	
-螭	trí	
-褫	trí	
-魑	trí	
-鴟	trí	
-黐	trí	
-始	trỉ	
-恥	trỉ	
-歯	trỉ	
-齒	trỉ	
-䚀	trẫm	
-沈	trầm	
-沉	trầm	
-𧠿	trầm	
-諂	trấm	
-磣	trẩm	
-趻	trẩm	
-踸	trẩm	
-塵	trần	
-敶	trần	
-樄	trần	
-軙	trần	
-迧	trần	
-陳	trần	
-𨻰	trần	
-儭	trấn	
-嗔	trấn	
-櫬	trấn	
-瞋	trấn	
-磣	trấn	
-襯	trấn	
-趁	trấn	
-齔	trấn	
-哂	trẩn	
-殄	trẩn	
-畛	trẩn	
-疹	trẩn	
-矧	trẩn	
-稹	trẩn	
-縝	trẩn	
-胗	trẩn	
-蕆	trẩn	
-訠	trẩn	
-診	trẩn	
-軫	trẩn	
-闡	trẩn	
-鬒	trẩn	
-㐱	trẩn	
-䂧	trẩn	
-籌	trữu	
-儔	trừu	
-幬	trừu	
-惆	trừu	
-疇	trừu	
-稠	trừu	
-籌	trừu	
-紬	trừu	
-綢	trừu	
-躊	trừu	
-酧	trừu	
-酬	trừu	
-醻	trừu	
-嗅	trứu	
-溴	trứu	
-獸	trứu	
-糗	trứu	
-臭	trứu	
-螑	trứu	
-丑	trửu	
-醜	trửu	
-矬	trò	
-耡	trò	
-鉏	trò	
-鋤	trò	
-初	tró	
-芻	tró	
-蒭	tró	
-雛	tró	
-鶵	tró	
-𥝢	tró	
-憷	trỏ	
-楚	trỏ	
-礎	trỏ	
-剒	trõc	
-戳	trõc	
-剒	tróc	
-戳	tróc	
-傳	tròn	
-竄	trỏn	
-瘡	trõng	
-噇	tròng	
-幢	tròng	
-床	tròng	
-橦	tròng	
-牀	tròng	
-創	trỏng	
-廠	trỏng	
-惝	trỏng	
-敞	trỏng	
-昶	trỏng	
-氅	trỏng	
-闖	trỏng	
-耡	trù	
-鉏	trù	
-鋤	trù	
-佇	trũi	
-儲	trũi	
-壴	trũi	
-宁	trũi	
-杵	trũi	
-杼	trũi	
-柱	trũi	
-楮	trũi	
-槌	trũi	
-砫	trũi	
-紵	trũi	
-苧	trũi	
-處	trũi	
-褚	trũi	
-貯	trũi	
-幮	trùi	
-廚	trùi	
-捶	trùi	
-棰	trùi	
-椎	trùi	
-櫥	trùi	
-滁	trùi	
-箠	trùi	
-篨	trùi	
-蜍	trùi	
-蠩	trùi	
-躇	trùi	
-躕	trùi	
-錘	trùi	
-鎚	trùi	
-除	trùi	
-吹	trúi	
-炊	trúi	
-䶴	trúi	
-処	trủi	
-處	trủi	
-亍	truc	
-俶	truc	
-怵	truc	
-搐	truc	
-束	truc	
-畜	truc	
-矗	truc	
-蓄	truc	
-觸	truc	
-豖	truc	
-串	trỗn	
-膥	trỗn	
-傳	trồn	
-串	trốn	
-巛	trốn	
-川	trốn	
-攢	trốn	
-旾	trốn	
-春	trốn	
-椿	trốn	
-氚	trốn	
-汌	trốn	
-穿	trốn	
-蝽	trốn	
-釧	trốn	
-鰆	trốn	
-喘	trổn	
-忖	trổn	
-揣	trổn	
-湍	trổn	
-猯	trổn	
-篅	trổn	
-舛	trổn	
-蠢	trổn	
-貒	trổn	
-踳	trổn	
-遄	trổn	
-䦟	trổn	
-涌	trũng	
-蟲	trũng	
-种	trùng	
-虫	trùng	
-蟲	trùng	
-重	trùng	
-充	trúng	
-冢	trúng	
-寵	trúng	
-忡	trúng	
-憃	trúng	
-憧	trúng	
-揰	trúng	
-橦	trúng	
-沖	trúng	
-浺	trúng	
-珫	trúng	
-罿	trúng	
-翀	trúng	
-艟	trúng	
-茺	trúng	
-衝	trúng	
-衷	trúng	
-謥	trúng	
-重	trúng	
-銃	trúng	
-㤝	trúng	
-㳘	trúng	
-䆔	trúng	
-䆹	trúng	
-䘪	trúng	
-𡺪	trúng	
-𥅻	trúng	
-出	trôt	
-黢	trôt	
-齣	trôt	
+叉	xã	
+岔	xã	
+扠	xã	
+杈	xã	
+碴	xã	
+衩	xã	
+鑔	xã	
+塗	xà	
+嵖	xà	
+搽	xà	
+查	xà	
+楂	xà	
+槎	xà	
+猹	xà	
+茬	xà	
+茶	xà	
+蹅	xà	
+餷	xà	
+侘	xá	
+叉	xá	
+喳	xá	
+嗏	xá	
+垞	xá	
+奼	xá	
+差	xá	
+汊	xá	
+詫	xá	
+赤	xá	
+叉	xả	
+喍	xãi	
+柴	xãi	
+瘥	xãi	
+䓱	xãi	
+豺	xài	
+嘬	xái	
+差	xái	
+搋	xái	
+猜	xái	
+瘛	xái	
+蠆	xái	
+釵	xái	
+䜺	xái	
+歪	xải	
+膪	xải	
+跐	xải	
+跴	xải	
+踩	xải	
+踹	xải	
+坼	xác	
+拆	xác	
+冊	xac	
+惻	xac	
+擦	xac	
+敇	xac	
+柵	xac	
+測	xac	
+策	xac	
+筴	xac	
+讒	xàm	
+篸	xảm	
+剗	xản	
+滻	xản	
+產	xản	
+羼	xản	
+鏟	xản	
+棖	xành	
+橙	xành	
+鋥	xành	
+䁎	xành	
+撐	xánh	
+槍	xánh	
+牚	xánh	
+睜	xánh	
+瞠	xánh	
+罉	xánh	
+蹭	xánh	
+鋥	xánh	
+鐣	xánh	
+鐺	xánh	
+䁎	xánh	
+䟓	xánh	
+巢	xào	
+皺	xào	
+窼	xào	
+剿	xáo	
+抄	xáo	
+鈔	xáo	
+吵	xảo	
+炒	xảo	
+煼	xảo	
+訬	xảo	
+扱	xáp	
+插	xáp	
+歃	xáp	
+臿	xáp	
+鍤	xáp	
+刷	xàt	
+獺	xàt	
+刷	xát	
+唰	xát	
+嚓	xát	
+擦	xát	
+攃	xát	
+礤	xát	
+礸	xát	
+䃰	xát	
+察	xat	
+檫	xat	
+唓	xé	
+奢	xé	
+硨	xé	
+車	xé	
+且	xẻ	
+尺	xẻ	
+扯	xẻ	
+撦	xẻ	
+趄	xẻ	
+跙	xẻ	
+仄	xich	
+勅	xich	
+勑	xich	
+叱	xich	
+哧	xich	
+尺	xich	
+屮	xich	
+彳	xich	
+徹	xich	
+掣	xich	
+撤	xich	
+敕	xich	
+斥	xich	
+沏	xich	
+澈	xich	
+赤	xich	
+飭	xich	
+㡿	xich	
+䃎	xich	
+𢮓	xich	
+參	xẻm	
+杉	xẻm	
+釤	xẻm	
+秤	xĩnh	
+稱	xĩnh	
+𦓬	xĩnh	
+侱	xình	
+呈	xình	
+埕	xình	
+徎	xình	
+懲	xình	
+浧	xình	
+澂	xình	
+澄	xình	
+澶	xình	
+珵	xình	
+程	xình	
+纏	xình	
+裎	xình	
+躔	xình	
+逞	xình	
+郢	xình	
+酲	xình	
+鋥	xình	
+餳	xình	
+𨙼	xình	
+偁	xính	
+稱	xính	
+穪	xính	
+拯	xỉnh	
+裎	xỉnh	
+逞	xỉnh	
+郢	xỉnh	
+騁	xỉnh	
+𩧢	xỉnh	
+尺	xễc	
+⻌	xệc	
+⻍	xệc	
+⻎	xệc	
+辵	xệc	
+辶	xệc	
+㚟	xệc	
+呎	xếc	
+尺	xếc	
+赤	xếc	
+倬	xêc	
+卓	xêc	
+焯	xêc	
+綽	xêc	
+踔	xêc	
+逴	xêc	
+鵫	xêc	
+晁	xiều	
+朝	xiều	
+潮	xiều	
+瞅	xiều	
+瞧	xiều	
+鼂	xiều	
+怊	xiếu	
+繰	xiếu	
+超	xiếu	
+諂	xiểm	
+蟬	xiễn	
+廛	xiền	
+瀍	xiền	
+丈	xễnh	
+場	xềnh	
+塲	xềnh	
+澄	xềnh	
+腸	xềnh	
+萇	xềnh	
+長	xềnh	
+倀	xếnh	
+倡	xếnh	
+唱	xếnh	
+娼	xếnh	
+昌	xếnh	
+晿	xếnh	
+猖	xếnh	
+琩	xếnh	
+菖	xếnh	
+閶	xếnh	
+鯧	xếnh	
+䱽	xếnh	
+悵	xểnh	
+暢	xểnh	
+瑒	xểnh	
+鬯	xểnh	
+抽	xấu	
+瘳	xấu	
+篘	xấu	
+紬	xấu	
+轍	xet	
+峙	xĩ	
+俿	xì	
+倁	xì	
+坻	xì	
+墀	xì	
+弛	xì	
+持	xì	
+池	xì	
+疷	xì	
+竾	xì	
+筂	xì	
+箎	xì	
+篪	xì	
+胝	xì	
+蚳	xì	
+踟	xì	
+遲	xì	
+馳	xì	
+䶵	xì	
+嚏	xị	
+杘	xị	
+跮	xị	
+㗣	xị	
+侈	xí	
+呲	xí	
+啻	xí	
+嗤	xí	
+媸	xí	
+差	xí	
+幟	xí	
+旘	xí	
+滍	xí	
+熾	xí	
+癡	xí	
+眙	xí	
+眵	xí	
+笞	xí	
+絺	xí	
+翄	xí	
+翅	xí	
+翤	xí	
+翨	xí	
+胵	xí	
+茌	xí	
+蚩	xí	
+蚳	xí	
+螭	xí	
+褫	xí	
+魑	xí	
+鴟	xí	
+黐	xí	
+始	xỉ	
+恥	xỉ	
+歯	xỉ	
+齒	xỉ	
+䚀	xẫm	
+沈	xầm	
+沉	xầm	
+𧠿	xầm	
+諂	xấm	
+磣	xẩm	
+趻	xẩm	
+踸	xẩm	
+塵	xần	
+敶	xần	
+樄	xần	
+軙	xần	
+迧	xần	
+陳	xần	
+𨻰	xần	
+儭	xấn	
+嗔	xấn	
+櫬	xấn	
+瞋	xấn	
+磣	xấn	
+襯	xấn	
+趁	xấn	
+齔	xấn	
+哂	xẩn	
+殄	xẩn	
+畛	xẩn	
+疹	xẩn	
+矧	xẩn	
+稹	xẩn	
+縝	xẩn	
+胗	xẩn	
+蕆	xẩn	
+訠	xẩn	
+診	xẩn	
+軫	xẩn	
+闡	xẩn	
+鬒	xẩn	
+㐱	xẩn	
+䂧	xẩn	
+籌	xữu	
+儔	xừu	
+幬	xừu	
+惆	xừu	
+疇	xừu	
+稠	xừu	
+籌	xừu	
+紬	xừu	
+綢	xừu	
+躊	xừu	
+酧	xừu	
+酬	xừu	
+醻	xừu	
+嗅	xứu	
+溴	xứu	
+獸	xứu	
+糗	xứu	
+臭	xứu	
+螑	xứu	
+丑	xửu	
+醜	xửu	
+矬	xò	
+耡	xò	
+鉏	xò	
+鋤	xò	
+初	xó	
+芻	xó	
+蒭	xó	
+雛	xó	
+鶵	xó	
+𥝢	xó	
+憷	xỏ	
+楚	xỏ	
+礎	xỏ	
+剒	xõc	
+戳	xõc	
+剒	xóc	
+戳	xóc	
+傳	xòn	
+竄	xỏn	
+瘡	xõng	
+噇	xòng	
+幢	xòng	
+床	xòng	
+橦	xòng	
+牀	xòng	
+創	xỏng	
+廠	xỏng	
+惝	xỏng	
+敞	xỏng	
+昶	xỏng	
+氅	xỏng	
+闖	xỏng	
+耡	xù	
+鉏	xù	
+鋤	xù	
+佇	xũi	
+儲	xũi	
+壴	xũi	
+宁	xũi	
+杵	xũi	
+杼	xũi	
+柱	xũi	
+楮	xũi	
+槌	xũi	
+砫	xũi	
+紵	xũi	
+苧	xũi	
+處	xũi	
+褚	xũi	
+貯	xũi	
+幮	xùi	
+廚	xùi	
+捶	xùi	
+棰	xùi	
+椎	xùi	
+櫥	xùi	
+滁	xùi	
+箠	xùi	
+篨	xùi	
+蜍	xùi	
+蠩	xùi	
+躇	xùi	
+躕	xùi	
+錘	xùi	
+鎚	xùi	
+除	xùi	
+吹	xúi	
+炊	xúi	
+䶴	xúi	
+処	xủi	
+處	xủi	
+亍	xuc	
+俶	xuc	
+怵	xuc	
+搐	xuc	
+束	xuc	
+畜	xuc	
+矗	xuc	
+蓄	xuc	
+觸	xuc	
+豖	xuc	
+串	xỗn	
+膥	xỗn	
+傳	xồn	
+串	xốn	
+巛	xốn	
+川	xốn	
+攢	xốn	
+旾	xốn	
+春	xốn	
+椿	xốn	
+氚	xốn	
+汌	xốn	
+穿	xốn	
+蝽	xốn	
+釧	xốn	
+鰆	xốn	
+喘	xổn	
+忖	xổn	
+揣	xổn	
+湍	xổn	
+猯	xổn	
+篅	xổn	
+舛	xổn	
+蠢	xổn	
+貒	xổn	
+踳	xổn	
+遄	xổn	
+䦟	xổn	
+涌	xũng	
+蟲	xũng	
+种	xùng	
+虫	xùng	
+蟲	xùng	
+重	xùng	
+充	xúng	
+冢	xúng	
+寵	xúng	
+忡	xúng	
+憃	xúng	
+憧	xúng	
+揰	xúng	
+橦	xúng	
+沖	xúng	
+浺	xúng	
+珫	xúng	
+罿	xúng	
+翀	xúng	
+艟	xúng	
+茺	xúng	
+衝	xúng	
+衷	xúng	
+謥	xúng	
+重	xúng	
+銃	xúng	
+㤝	xúng	
+㳘	xúng	
+䆔	xúng	
+䆹	xúng	
+䘪	xúng	
+𡺪	xúng	
+𥅻	xúng	
+出	xôt	
+黢	xôt	
+齣	xôt	
 咑	tà	
 打	tả	
 䍤	tãi	
@@ -9666,461 +9666,461 @@
 術	sột	
 述	sột	
 鉥	sột	
-亝	xài	
-懠	xài	
-薺	xài	
-蠐	xài	
-齊	xài	
-凄	xái	
-切	xái	
-悽	xái	
-棲	xái	
-沏	xái	
-淒	xái	
-砌	xái	
-緀	xái	
-萋	xái	
-𪗏	xái	
-呔	xải	
-銻	xải	
-賊	xạc	
-鰂	xạc	
-蠶	xãm	
-巉	xàm	
-慚	xàm	
-欃	xàm	
-讒	xàm	
-饞	xàm	
-參	xám	
-叅	xám	
-噆	xám	
-摻	xám	
-攙	xám	
-瘮	xám	
-穇	xám	
-蔘	xám	
-驂	xám	
-參	xảm	
-慘	xảm	
-黲	xảm	
-殘	xãn	
-殘	xàn	
-嘆	xán	
-湌	xán	
-飡	xán	
-餐	xán	
-䱗	xán	
-燦	xản	
-璨	xản	
-粲	xản	
-層	xành	
-曾	xành	
-嘈	xào	
-曹	xào	
-槽	xào	
-漕	xào	
-艚	xào	
-螬	xào	
-鰽	xào	
-噪	xáo	
-操	xáo	
-澡	xáo	
-燥	xáo	
-糙	xáo	
-藻	xáo	
-趮	xáo	
-躁	xáo	
-㿷	xáo	
-屮	xảo	
-艸	xảo	
-草	xảo	
-甴	xàt	
-遢	xàt	
-羍	xát	
-踏	xát	
-遢	xát	
-撻	xat	
-斜	xè	
-邪	xè	
-切	xích	
-竊	xích	
-俶	xich	
-倜	xich	
-切	xich	
-剔	xich	
-嘁	xich	
-忑	xich	
-忒	xich	
-惕	xich	
-慝	xich	
-慼	xich	
-慽	xich	
-戚	xich	
-槭	xich	
-脦	xich	
-裼	xich	
-趯	xich	
-鋱	xich	
-前	xình	
-情	xình	
-錢	xình	
-䝼	xình	
-仟	xính	
-千	xính	
-圊	xính	
-扦	xính	
-氰	xính	
-淸	xính	
-清	xính	
-箐	xính	
-芊	xính	
-菁	xính	
-蜻	xính	
-蹮	xính	
-躚	xính	
-遷	xính	
-郬	xính	
-釺	xính	
-阡	xính	
-靑	xính	
-青	xính	
-靘	xính	
-韆	xính	
-鯖	xính	
-淺	xỉnh	
-請	xỉnh	
-疼	xếc	
-赤	xếc	
-憔	xiều	
-樵	xiều	
-癄	xiều	
-瞧	xiều	
-譙	xiều	
-顦	xiều	
-俏	xiếu	
-峭	xiếu	
-誚	xiếu	
-鍫	xiếu	
-鍬	xiếu	
-悄	xiểu	
-愀	xiểu	
-塹	xiễm	
-槧	xiễm	
-簽	xiễm	
-籖	xiễm	
-籤	xiễm	
-撏	xiềm	
-潛	xiềm	
-懺	xiếm	
-暹	xiếm	
-殲	xiếm	
-簽	xiếm	
-讖	xiếm	
-詳	xễnh	
-青	xễnh	
-墻	xềnh	
-嬙	xềnh	
-庠	xềnh	
-廧	xềnh	
-戕	xềnh	
-晴	xềnh	
-暒	xềnh	
-檣	xềnh	
-爿	xềnh	
-牆	xềnh	
-祥	xềnh	
-羏	xềnh	
-翔	xềnh	
-艢	xềnh	
-薔	xềnh	
-詳	xềnh	
-嗆	xếnh	
-戧	xếnh	
-槍	xếnh	
-牄	xếnh	
-瑲	xếnh	
-篬	xếnh	
-蹌	xếnh	
-蹡	xếnh	
-錆	xếnh	
-鎗	xếnh	
-鑲	xếnh	
-青	xếnh	
-搶	xểnh	
-請	xểnh	
-楱	xấu	
-湊	xấu	
-輳	xấu	
-呫	xiêp	
-妾	xiêp	
-踥	xiêp	
-似	xĩ	
-糍	xĩ	
-臍	xĩ	
-薺	xĩ	
-蹄	xĩ	
-粢	xì	
-糍	xì	
-餈	xì	
-揌	xí	
-尋	xẫm	
-尋	xầm	
-潯	xầm	
-灥	xầm	
-蕁	xầm	
-覃	xầm	
-鐔	xầm	
-鱘	xầm	
-侵	xấm	
-僉	xấm	
-唚	xấm	
-摻	xấm	
-簽	xấm	
-纖	xấm	
-鋟	xấm	
-駸	xấm	
-寑	xẩm	
-寢	xẩm	
-梫	xẩm	
-親	xấn	
-戢	xâp	
-揖	xâp	
-楫	xâp	
-檝	xâp	
-緝	xâp	
-艥	xâp	
-蕺	xâp	
-輯	xâp	
-㗊	xâp	
-七	xât	
-咠	xât	
-柒	xât	
-漆	xât	
-舙	xât	
-葺	xât	
-鰍	xữu	
-囚	xừu	
-泅	xừu	
-啾	xứu	
-揪	xứu	
-楸	xứu	
-湊	xứu	
-湫	xứu	
-秋	xứu	
-萩	xứu	
-鞦	xứu	
-鞧	xứu	
-鬏	xứu	
-鰌	xứu	
-鰍	xứu	
-鶖	xứu	
-龝	xứu	
-䆋	xứu	
-痤	xõ	
-銼	xõ	
-剉	xó	
-唑	xó	
-坐	xó	
-嵯	xó	
-挫	xó	
-搓	xó	
-痤	xó	
-瘥	xó	
-矬	xó	
-磋	xó	
-脞	xó	
-莝	xó	
-蹉	xó	
-銼	xó	
-錯	xó	
-鹺	xó	
-菜	xõi	
-才	xòi	
-材	xòi	
-纔	xòi	
-裁	xòi	
-財	xòi	
-䴭	xòi	
-菜	xói	
-蔡	xói	
-埰	xỏi	
-寀	xỏi	
-彩	xỏi	
-採	xỏi	
-睬	xỏi	
-綵	xỏi	
-茝	xỏi	
-采	xỏi	
-鑿	xõc	
-雹	xõc	
-攛	xón	
-爨	xón	
-躥	xón	
-鑹	xón	
-爨	xỏn	
-竄	xỏn	
-蹌	xỏn	
-藏	xòng	
-倉	xóng	
-傖	xóng	
-囱	xóng	
-愴	xóng	
-滄	xóng	
-熗	xóng	
-牎	xóng	
-牕	xóng	
-窓	xóng	
-窗	xóng	
-窻	xóng	
-篬	xóng	
-艙	xóng	
-蒼	xóng	
-蹌	xóng	
-鶬	xóng	
-𥦗	xóng	
-卒	xot	
-撮	xot	
-猝	xot	
-吐	xũ	
-唾	xũ	
-徂	xù	
-殂	xù	
-厝	xú	
-唑	xú	
-坐	xú	
-嵯	xú	
-措	xú	
-搓	xú	
-粗	xú	
-觕	xú	
-蹉	xú	
-酢	xú	
-醋	xú	
-麁	xú	
-麄	xú	
-麤	xú	
-徐	xùi	
-隋	xùi	
-隨	xùi	
-催	xúi	
-啐	xúi	
-娶	xúi	
-崔	xúi	
-推	xúi	
-摧	xúi	
-榱	xúi	
-毳	xúi	
-淬	xúi	
-漼	xúi	
-焌	xúi	
-璀	xúi	
-縗	xúi	
-翠	xúi	
-脆	xúi	
-膗	xúi	
-蛆	xúi	
-衰	xúi	
-趣	xúi	
-趨	xúi	
-取	xủi	
-娶	xủi	
-促	xuc	
-涑	xuc	
-禿	xuc	
-簇	xuc	
-簌	xuc	
-蔌	xuc	
-蔟	xuc	
-觫	xuc	
-謖	xuc	
-踧	xuc	
-蹙	xuc	
-蹴	xuc	
-蹵	xuc	
-速	xuc	
-遬	xuc	
-鵚	xuc	
-齪	xuc	
-圳	xỗn	
-屯	xỗn	
-屯	xỗn	
-村	xỗn	
-榛	xỗn	
-津	xỗn	
-溱	xỗn	
-獉	xỗn	
-窀	xỗn	
-肫	xỗn	
-臻	xỗn	
-蓁	xỗn	
-衠	xỗn	
-諄	xỗn	
-迍	xỗn	
-邨	xỗn	
-佺	xồn	
-全	xồn	
-嗪	xồn	
-囤	xồn	
-存	xồn	
-巡	xồn	
-廵	xồn	
-循	xồn	
-旬	xồn	
-栒	xồn	
-栓	xồn	
-泉	xồn	
-溱	xồn	
-痊	xồn	
-秦	xồn	
-筌	xồn	
-荃	xồn	
-螓	xồn	
-詮	xồn	
-蹲	xồn	
-輇	xồn	
-醛	xồn	
-鰁	xồn	
-吋	xốn	
-寸	xốn	
-村	xốn	
-𧨸	xổn	
-蔥	xũng	
-叢	xùng	
-従	xùng	
-從	xùng	
-悰	xùng	
-松	xùng	
-枀	xùng	
-枩	xùng	
-柗	xùng	
-梥	xùng	
-淞	xùng	
-漎	xùng	
-潀	xùng	
-潨	xùng	
-灇	xùng	
-茼	xùng	
-藂	xùng	
-賨	xùng	
-䕺	xùng	
-𠚪	xùng	
-𥵫	xùng	
-匆	xúng	
-怱	xúng	
-悤	xúng	
-樅	xúng	
-瑽	xúng	
-璁	xúng	
-璁	xúng	
-聰	xúng	
-蓯	xúng	
-蔥	xúng	
-鏦	xúng	
-騘	xúng	
-驄	xúng	
-慫	xủng	
-𥓿	xuõ	
-擦	xốt	
+亝	txài	
+懠	txài	
+薺	txài	
+蠐	txài	
+齊	txài	
+凄	txái	
+切	txái	
+悽	txái	
+棲	txái	
+沏	txái	
+淒	txái	
+砌	txái	
+緀	txái	
+萋	txái	
+𪗏	txái	
+呔	txải	
+銻	txải	
+賊	txạc	
+鰂	txạc	
+蠶	txãm	
+巉	txàm	
+慚	txàm	
+欃	txàm	
+讒	txàm	
+饞	txàm	
+參	txám	
+叅	txám	
+噆	txám	
+摻	txám	
+攙	txám	
+瘮	txám	
+穇	txám	
+蔘	txám	
+驂	txám	
+參	txảm	
+慘	txảm	
+黲	txảm	
+殘	txãn	
+殘	txàn	
+嘆	txán	
+湌	txán	
+飡	txán	
+餐	txán	
+䱗	txán	
+燦	txản	
+璨	txản	
+粲	txản	
+層	txành	
+曾	txành	
+嘈	txào	
+曹	txào	
+槽	txào	
+漕	txào	
+艚	txào	
+螬	txào	
+鰽	txào	
+噪	txáo	
+操	txáo	
+澡	txáo	
+燥	txáo	
+糙	txáo	
+藻	txáo	
+趮	txáo	
+躁	txáo	
+㿷	txáo	
+屮	txảo	
+艸	txảo	
+草	txảo	
+甴	txàt	
+遢	txàt	
+羍	txát	
+踏	txát	
+遢	txát	
+撻	txat	
+斜	txè	
+邪	txè	
+切	txích	
+竊	txích	
+俶	txich	
+倜	txich	
+切	txich	
+剔	txich	
+嘁	txich	
+忑	txich	
+忒	txich	
+惕	txich	
+慝	txich	
+慼	txich	
+慽	txich	
+戚	txich	
+槭	txich	
+脦	txich	
+裼	txich	
+趯	txich	
+鋱	txich	
+前	txình	
+情	txình	
+錢	txình	
+䝼	txình	
+仟	txính	
+千	txính	
+圊	txính	
+扦	txính	
+氰	txính	
+淸	txính	
+清	txính	
+箐	txính	
+芊	txính	
+菁	txính	
+蜻	txính	
+蹮	txính	
+躚	txính	
+遷	txính	
+郬	txính	
+釺	txính	
+阡	txính	
+靑	txính	
+青	txính	
+靘	txính	
+韆	txính	
+鯖	txính	
+淺	txỉnh	
+請	txỉnh	
+疼	txếc	
+赤	txếc	
+憔	txiều	
+樵	txiều	
+癄	txiều	
+瞧	txiều	
+譙	txiều	
+顦	txiều	
+俏	txiếu	
+峭	txiếu	
+誚	txiếu	
+鍫	txiếu	
+鍬	txiếu	
+悄	txiểu	
+愀	txiểu	
+塹	txiễm	
+槧	txiễm	
+簽	txiễm	
+籖	txiễm	
+籤	txiễm	
+撏	txiềm	
+潛	txiềm	
+懺	txiếm	
+暹	txiếm	
+殲	txiếm	
+簽	txiếm	
+讖	txiếm	
+詳	txễnh	
+青	txễnh	
+墻	txềnh	
+嬙	txềnh	
+庠	txềnh	
+廧	txềnh	
+戕	txềnh	
+晴	txềnh	
+暒	txềnh	
+檣	txềnh	
+爿	txềnh	
+牆	txềnh	
+祥	txềnh	
+羏	txềnh	
+翔	txềnh	
+艢	txềnh	
+薔	txềnh	
+詳	txềnh	
+嗆	txếnh	
+戧	txếnh	
+槍	txếnh	
+牄	txếnh	
+瑲	txếnh	
+篬	txếnh	
+蹌	txếnh	
+蹡	txếnh	
+錆	txếnh	
+鎗	txếnh	
+鑲	txếnh	
+青	txếnh	
+搶	txểnh	
+請	txểnh	
+楱	txấu	
+湊	txấu	
+輳	txấu	
+呫	txiêp	
+妾	txiêp	
+踥	txiêp	
+似	txĩ	
+糍	txĩ	
+臍	txĩ	
+薺	txĩ	
+蹄	txĩ	
+粢	txì	
+糍	txì	
+餈	txì	
+揌	txí	
+尋	txẫm	
+尋	txầm	
+潯	txầm	
+灥	txầm	
+蕁	txầm	
+覃	txầm	
+鐔	txầm	
+鱘	txầm	
+侵	txấm	
+僉	txấm	
+唚	txấm	
+摻	txấm	
+簽	txấm	
+纖	txấm	
+鋟	txấm	
+駸	txấm	
+寑	txẩm	
+寢	txẩm	
+梫	txẩm	
+親	txấn	
+戢	txâp	
+揖	txâp	
+楫	txâp	
+檝	txâp	
+緝	txâp	
+艥	txâp	
+蕺	txâp	
+輯	txâp	
+㗊	txâp	
+七	txât	
+咠	txât	
+柒	txât	
+漆	txât	
+舙	txât	
+葺	txât	
+鰍	txữu	
+囚	txừu	
+泅	txừu	
+啾	txứu	
+揪	txứu	
+楸	txứu	
+湊	txứu	
+湫	txứu	
+秋	txứu	
+萩	txứu	
+鞦	txứu	
+鞧	txứu	
+鬏	txứu	
+鰌	txứu	
+鰍	txứu	
+鶖	txứu	
+龝	txứu	
+䆋	txứu	
+痤	txõ	
+銼	txõ	
+剉	txó	
+唑	txó	
+坐	txó	
+嵯	txó	
+挫	txó	
+搓	txó	
+痤	txó	
+瘥	txó	
+矬	txó	
+磋	txó	
+脞	txó	
+莝	txó	
+蹉	txó	
+銼	txó	
+錯	txó	
+鹺	txó	
+菜	txõi	
+才	txòi	
+材	txòi	
+纔	txòi	
+裁	txòi	
+財	txòi	
+䴭	txòi	
+菜	txói	
+蔡	txói	
+埰	txỏi	
+寀	txỏi	
+彩	txỏi	
+採	txỏi	
+睬	txỏi	
+綵	txỏi	
+茝	txỏi	
+采	txỏi	
+鑿	txõc	
+雹	txõc	
+攛	txón	
+爨	txón	
+躥	txón	
+鑹	txón	
+爨	txỏn	
+竄	txỏn	
+蹌	txỏn	
+藏	txòng	
+倉	txóng	
+傖	txóng	
+囱	txóng	
+愴	txóng	
+滄	txóng	
+熗	txóng	
+牎	txóng	
+牕	txóng	
+窓	txóng	
+窗	txóng	
+窻	txóng	
+篬	txóng	
+艙	txóng	
+蒼	txóng	
+蹌	txóng	
+鶬	txóng	
+𥦗	txóng	
+卒	txot	
+撮	txot	
+猝	txot	
+吐	txũ	
+唾	txũ	
+徂	txù	
+殂	txù	
+厝	txú	
+唑	txú	
+坐	txú	
+嵯	txú	
+措	txú	
+搓	txú	
+粗	txú	
+觕	txú	
+蹉	txú	
+酢	txú	
+醋	txú	
+麁	txú	
+麄	txú	
+麤	txú	
+徐	txùi	
+隋	txùi	
+隨	txùi	
+催	txúi	
+啐	txúi	
+娶	txúi	
+崔	txúi	
+推	txúi	
+摧	txúi	
+榱	txúi	
+毳	txúi	
+淬	txúi	
+漼	txúi	
+焌	txúi	
+璀	txúi	
+縗	txúi	
+翠	txúi	
+脆	txúi	
+膗	txúi	
+蛆	txúi	
+衰	txúi	
+趣	txúi	
+趨	txúi	
+取	txủi	
+娶	txủi	
+促	txuc	
+涑	txuc	
+禿	txuc	
+簇	txuc	
+簌	txuc	
+蔌	txuc	
+蔟	txuc	
+觫	txuc	
+謖	txuc	
+踧	txuc	
+蹙	txuc	
+蹴	txuc	
+蹵	txuc	
+速	txuc	
+遬	txuc	
+鵚	txuc	
+齪	txuc	
+圳	txỗn	
+屯	txỗn	
+屯	txỗn	
+村	txỗn	
+榛	txỗn	
+津	txỗn	
+溱	txỗn	
+獉	txỗn	
+窀	txỗn	
+肫	txỗn	
+臻	txỗn	
+蓁	txỗn	
+衠	txỗn	
+諄	txỗn	
+迍	txỗn	
+邨	txỗn	
+佺	txồn	
+全	txồn	
+嗪	txồn	
+囤	txồn	
+存	txồn	
+巡	txồn	
+廵	txồn	
+循	txồn	
+旬	txồn	
+栒	txồn	
+栓	txồn	
+泉	txồn	
+溱	txồn	
+痊	txồn	
+秦	txồn	
+筌	txồn	
+荃	txồn	
+螓	txồn	
+詮	txồn	
+蹲	txồn	
+輇	txồn	
+醛	txồn	
+鰁	txồn	
+吋	txốn	
+寸	txốn	
+村	txốn	
+𧨸	txổn	
+蔥	txũng	
+叢	txùng	
+従	txùng	
+從	txùng	
+悰	txùng	
+松	txùng	
+枀	txùng	
+枩	txùng	
+柗	txùng	
+梥	txùng	
+淞	txùng	
+漎	txùng	
+潀	txùng	
+潨	txùng	
+灇	txùng	
+茼	txùng	
+藂	txùng	
+賨	txùng	
+䕺	txùng	
+𠚪	txùng	
+𥵫	txùng	
+匆	txúng	
+怱	txúng	
+悤	txúng	
+樅	txúng	
+瑽	txúng	
+璁	txúng	
+璁	txúng	
+聰	txúng	
+蓯	txúng	
+蔥	txúng	
+鏦	txúng	
+騘	txúng	
+驄	txúng	
+慫	txủng	
+𥓿	txuõ	
+擦	txốt	
 妒	ụ	
 妬	ụ	
 度	ụ	
