--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -6,7 +6,7 @@
 #vai同oai音節正寫嘅韻腹發音喺廣州音入面相同, 呢兩種正寫嘅分別係，有實際意義嘅詞語或者以v作為韻首嘅情況用vai，用嚟表示「㗏」[ʔwaːj]或者[waːj]語氣詞嘅音節可以使用oai正寫
 #vy同uây音節正寫嘅韻腹發音喺廣州音入面相同, 呢兩種正寫嘅分別係，有實際意義嘅詞語或者以v作為韻首嘅情況用vy，用嚟表示「喂」[ʔwəj]或者[wəj]語氣詞嘅音節可以使用uây正寫
 #韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
-#version: 12/6/2025
+#version: 08/12/2025
 #author: cathaylab
 （廣州音）	邊	binh
 （廣州音）	邊	biên
@@ -6839,7 +6839,7 @@
 （通用版）	迧	xần
 （廣州音）	迧	xần
 （台山音）	迧	xần
-（通用版）	陳	xần
+（通用版）	陳	trần
 （廣州音）	陳	chận
 （廣州音）	陳	xần
 （台山音）	陳	xần
@@ -11840,6 +11840,7 @@
 （廣州音）	嫞	yùng
 （台山音）	嫞	sùng
 （台山音）	嫞	yụng
+（通用版）	從	txung
 （通用版）	從	slung
 （廣州音）	從	chung
 （廣州音）	從	chúng
@@ -13106,7 +13107,6 @@
 （廣州音）	褝	đan
 （廣州音）	襌	đan
 （南寧音）	襌	đan
-（廣州音）	鄲	quich
 （廣州音）	鄲	đan
 （台山音）	鄲	án
 （欽州音）	鄲	đan
@@ -16203,7 +16203,7 @@
 （廣州音）	衜	đố
 （廣州音）	衜	độ
 （台山音）	衜	ạo
-（通用版）	道	đáu
+（通用版）	道	đạu
 （廣州音）	道	đố
 （廣州音）	道	độ
 （台山音）	道	ạo
@@ -17192,7 +17192,7 @@
 （廣州音）	䘗	phay
 （廣州音）	䜐	phay
 （廣州音）	噅	phay
-（南寧音）	噅	(文)phay/(文)phê
+（南寧音）	噅	(文)phay
 （南寧音）	噅	(白)uy
 （廣州音）	噕	phay
 （廣州音）	婎	phay
@@ -17214,17 +17214,17 @@
 （廣州音）	揮	phay
 （台山音）	揮	phí
 （欽州音）	揮	phi
-（南寧音）	揮	(文)phay/(文)phê
+（南寧音）	揮	(文)phay
 （南寧音）	揮	(白)uy
 （廣州音）	撝	phay
 （台山音）	撝	phí
 （欽州音）	撝	phui
-（南寧音）	撝	(文)phay/(文)phê
+（南寧音）	撝	(文)phay
 （南寧音）	撝	(白)uy
 （廣州音）	暉	phay
 （台山音）	暉	phí
 （欽州音）	暉	phi
-（南寧音）	暉	(文)phay/(文)phê
+（南寧音）	暉	(文)phay
 （南寧音）	暉	(白)uy
 （廣州音）	椲	phay
 （廣州音）	椲	vỹ
@@ -17238,14 +17238,14 @@
 （台山音）	煇	phốn
 （台山音）	煇	phí
 （台山音）	煇	vồn
-（南寧音）	煇	(文)phay/(文)phê
+（南寧音）	煇	(文)phay
 （南寧音）	煇	(白)uy
 （廣州音）	琿	phay
 （廣州音）	琿	vần
 （台山音）	琿	phí
 （台山音）	琿	vộn
 （欽州音）	琿	vần
-（南寧音）	琿	(文)phay/(文)phê
+（南寧音）	琿	(文)phay
 （南寧音）	琿	(白)uy
 （南寧音）	琿	vần
 （通用版）	睢	slui
@@ -17259,7 +17259,7 @@
 （廣州音）	禈	phay
 （廣州音）	翬	phay
 （台山音）	翬	phí
-（南寧音）	翬	(文)phay/(文)phê
+（南寧音）	翬	(文)phay
 （南寧音）	翬	(白)uy
 （廣州音）	蘳	phay
 （廣州音）	褘	phay
@@ -17274,7 +17274,7 @@
 （廣州音）	輝	phay
 （台山音）	輝	phí
 （欽州音）	輝	phi
-（南寧音）	輝	(文)phay/(文)phê
+（南寧音）	輝	(文)phay
 （南寧音）	輝	(白)uy
 （廣州音）	隓	phay
 （廣州音）	隓	thõ
@@ -17282,13 +17282,13 @@
 （廣州音）	隳	phui
 （台山音）	隳	phỉ
 （欽州音）	隳	phui
-（南寧音）	隳	(文)phay/(文)phê
+（南寧音）	隳	(文)phay
 （南寧音）	隳	(白)uy
 （廣州音）	鰴	phay
 （廣州音）	麾	phay
 （台山音）	麾	phí
 （欽州音）	麾	phui
-（南寧音）	麾	(文)phay/(文)phê
+（南寧音）	麾	(文)phay
 （南寧音）	麾	(白)uy
 （廣州音）	𡽪	phay
 （廣州音）	𤪖	phay
@@ -22208,7 +22208,7 @@
 （欽州音）	久	kẩu
 （南寧音）	久	kẩu
 （廣州音）	乆	kẩu/cẩu
-（通用版）	九	kửu
+（通用版）	九	cửu
 （廣州音）	九	kẩu/cẩu
 （台山音）	九	kửu
 （欽州音）	九	kẩu
@@ -25012,7 +25012,7 @@
 （欽州音）	膏	kâu
 （南寧音）	膏	(名)kô
 （南寧音）	膏	(動)kố
-（通用版）	臯	kau
+（通用版）	臯	kau/cau
 （廣州音）	臯	kô/cô
 （台山音）	臯	káo
 （通用版）	韟	kau
@@ -25108,7 +25108,7 @@
 （台山音）	䯻	kãi
 （廣州音）	吿	kuc/cuc
 （廣州音）	吿	kố/cố
-（通用版）	告	káu
+（通用版）	告	káu/cau
 （廣州音）	告	kuc/cuc
 （廣州音）	告	kố/cố
 （台山音）	告	káo
@@ -29748,7 +29748,7 @@
 （廣州音）	䣱	hủi
 （廣州音）	䣱	ứ
 （廣州音）	䧁	hủi
-（通用版）	休	nửu
+（通用版）	休	hưu
 （廣州音）	休	hủi
 （廣州音）	休	nẩu
 （廣州音）	休	yâu
@@ -32596,7 +32596,7 @@
 （欽州音）	夤	nhần
 （欽州音）	夤	yần
 （南寧音）	夤	yần
-（通用版）	寅	nhần
+（通用版）	寅	yần
 （廣州音）	寅	yần
 （台山音）	寅	yần
 （欽州音）	寅	nhần
@@ -33237,7 +33237,7 @@
 （廣州音）	斿	lầu
 （廣州音）	斿	yầu
 （廣州音）	斿	yậu
-（通用版）	柔	ngầu
+（通用版）	柔	nhầu
 （廣州音）	柔	yầu
 （台山音）	柔	ngiều
 （欽州音）	柔	yầu
@@ -33767,7 +33767,6 @@
 （廣州音）	蜹	yụi
 （台山音）	蜹	yụi
 （南寧音）	蜹	yội
-（通用版）	裔	nhụi
 （廣州音）	裔	yụi
 （台山音）	裔	yụi
 （欽州音）	裔	nhùi
@@ -34412,7 +34411,7 @@
 （台山音）	以	yĩ
 （欽州音）	以	ỷ
 （南寧音）	以	yĩ
-（通用版）	佴	ngị
+（通用版）	佴	nhị
 （廣州音）	佴	nại
 （廣州音）	佴	nọi
 （廣州音）	佴	yĩ
@@ -35862,6 +35861,7 @@
 （南寧音）	凝	(語)khình
 （南寧音）	凝	(語)năng
 （南寧音）	凝	nình
+（通用版）	刑	hình
 （廣州音）	刑	yình
 （台山音）	刑	yình
 （欽州音）	刑	hình
@@ -35891,6 +35891,7 @@
 （南寧音）	嶸	(又)vình
 （廣州音）	巆	vình
 （廣州音）	巆	yình
+（通用版）	形	hình
 （廣州音）	形	yình
 （台山音）	形	yình
 （欽州音）	形	hình
@@ -36023,6 +36024,7 @@
 （南寧音）	迎	yình
 （南寧音）	迎	(語)yịnh
 （南寧音）	迎	(語)ngình
+（通用版）	邢	hình
 （廣州音）	邢	yình
 （台山音）	邢	yình
 （欽州音）	邢	hình
@@ -36471,6 +36473,8 @@
 （台山音）	垚	yều
 （欽州音）	垚	yều
 （南寧音）	垚	yều
+（通用版）	堯	ngiều
+（廣州音）	堯	yều
 （廣州音）	堯	yều
 （欽州音）	堯	yều
 （南寧音）	堯	yều
@@ -47572,7 +47576,7 @@
 （欽州音）	瞇	mi
 （南寧音）	瞇	mãy/mễ
 （南寧音）	瞇	mi
-（廣州音）	糜	mày/mề
+（廣州音）	糜	mày
 （廣州音）	糜	mỳ
 （台山音）	糜	mòi
 （台山音）	糜	mỳ
@@ -55832,6 +55836,7 @@
 （廣州音）	㽒	săng
 （廣州音）	䲼	săng
 （廣州音）	䴤	săng
+（通用版）	僧	tăng
 （通用版）	僧	slăng
 （廣州音）	僧	chăng
 （廣州音）	僧	săng
@@ -56191,7 +56196,6 @@
 （欽州音）	嗽	slấu
 （南寧音）	嗽	slấu
 （通用版）	宿	slứu
-（通用版）	宿	sứu
 （廣州音）	宿	suc
 （廣州音）	宿	sấu
 （台山音）	宿	sluc
@@ -56499,7 +56503,7 @@
 （台山音）	鼫	sễc
 （南寧音）	鼫	sệc
 （廣州音）	𠰴	sệc
-（通用版）	星	slênh
+（通用版）	星	slinh
 （廣州音）	星	sinh
 （廣州音）	星	sênh
 （台山音）	星	slính
@@ -57866,7 +57870,7 @@
 （南寧音）	侍	sị
 （南寧音）	侍	(老派)sụ
 （廣州音）	叓	sị
-（通用版）	士	slị
+（通用版）	士	sị
 （廣州音）	士	sị
 （台山音）	士	slụ
 （欽州音）	士	slì
@@ -64513,6 +64517,7 @@
 （欽州音）	煌	vòng
 （南寧音）	煌	vòng
 （廣州音）	獚	vòng
+（通用版）	王	vường
 （廣州音）	王	vòng
 （廣州音）	王	vọng
 （台山音）	王	vòng
@@ -67738,7 +67743,7 @@
 （通用版）	搢	tuấn
 （廣州音）	搢	chuấn
 （台山音）	搢	tốn
-（通用版）	晉	tuấn
+（通用版）	晉	tấn
 （廣州音）	晉	chuấn
 （台山音）	晉	tốn
 （欽州音）	晉	chấn
@@ -69672,6 +69677,7 @@
 （台山音）	嫜	chếnh
 （欽州音）	嫜	chương
 （南寧音）	嫜	chương
+（通用版）	張	trương
 （廣州音）	張	chương
 （廣州音）	張	chướng
 （台山音）	張	chếnh
